--- a/examples/docusaurus/mistral/docs/api/tag/fim.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/fim.mdx
@@ -15,7 +15,7 @@ _Fim Completion_
 
 FIM completion.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -25,7 +25,7 @@ FIM completion.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -177,7 +177,7 @@ _Default Value:_ `1`
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-fim_completion_v1_fim_completions_post+responses\}
+### Response \{#operation-fim_completion_v1_fim_completions_post+responses\}
 
 </SectionTitle>
 
@@ -191,7 +191,7 @@ _Default Value:_ `1`
 
 Successful Response
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -207,7 +207,15 @@ Successful Response
 
 </Property>
 
-<ExpandableSection title="ChatCompletionChoice" id="operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ChatCompletionChoice \{#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+properties\}
 
@@ -251,7 +259,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="AssistantMessage" id="operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### AssistantMessage \{#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+properties\}
 
@@ -263,7 +279,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk \{#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+TextChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+TextChunk+properties\}
 
@@ -289,9 +313,19 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk \{#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -305,7 +339,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL \{#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk+ImageURL\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk+ImageURL+properties\}
 
@@ -329,6 +371,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -345,9 +389,19 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="DocumentURLChunk" id="operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk \{#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+DocumentURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+DocumentURLChunk+properties\}
 
@@ -383,9 +437,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ReferenceChunk" id="operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ReferenceChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ReferenceChunk \{#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ReferenceChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ReferenceChunk+properties\}
 
@@ -408,6 +472,8 @@ _Default Value:_ `"document_url"`
 </Property>
 
 _Default Value:_ `"reference"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -449,7 +515,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="ToolCall" id="operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ToolCall \{#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+properties\}
 
@@ -461,7 +535,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="FunctionCall" id="operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### FunctionCall \{#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall+properties\}
 
@@ -482,6 +564,8 @@ _Default Value:_ `"assistant"`
 ##### name \{#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall+name\}
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -523,11 +607,17 @@ _Default Value:_ `0`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -607,7 +697,15 @@ chat.completion
 
 </Property>
 
-<ExpandableSection title="UsageInfo" id="operation-fim_completion_v1_fim_completions_post+200+application-json+UsageInfo">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### UsageInfo \{#operation-fim_completion_v1_fim_completions_post+200+application-json+UsageInfo\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-fim_completion_v1_fim_completions_post+200+application-json+UsageInfo+properties\}
 
@@ -658,98 +756,6 @@ _Example:_
 ```
 
 </SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-<SectionTab slot="tab" id="operation-fim_completion_v1_fim_completions_post+422+application-json">
-
-422
-
-</SectionTab>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-fim_completion_v1_fim_completions_post+422+application-json">
-
-Validation Error
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-fim_completion_v1_fim_completions_post+422+application-json+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+422+application-json+Security\">Security</a>","children":[],"breakoutSubTypes":[{"label":"Security","schema":{"type":"object","description":null,"examples":[],"properties":{"ApiKey":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["ApiKey"],"name":"Security","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### HttpMeta \{#operation-fim_completion_v1_fim_completions_post+422+application-json+HttpMeta\}
-
-</Property>
-
-<ExpandableSection title="Security" id="operation-fim_completion_v1_fim_completions_post+422+application-json+Security">
-
-#### Properties \{#operation-fim_completion_v1_fim_completions_post+422+application-json+Security+properties\}
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-fim_completion_v1_fim_completions_post+422+application-json+Security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+422+application-json+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+422+application-json+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### detail \{#operation-fim_completion_v1_fim_completions_post+422+application-json+detail\}
-
-</Property>
-
-<ExpandableSection title="ValidationError" id="operation-fim_completion_v1_fim_completions_post+422+application-json+ValidationError">
-
-#### Properties \{#operation-fim_completion_v1_fim_completions_post+422+application-json+ValidationError+properties\}
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### loc \{#operation-fim_completion_v1_fim_completions_post+422+application-json+ValidationError+loc\}
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### msg \{#operation-fim_completion_v1_fim_completions_post+422+application-json+ValidationError+msg\}
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### type \{#operation-fim_completion_v1_fim_completions_post+422+application-json+ValidationError+type\}
-
-</Property>
 
 </SectionContent>
 
