--- a/examples/docusaurus/mistral/docs/api/tag/ocr.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/ocr.mdx
@@ -13,7 +13,7 @@ import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSectio
 
 OCR
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -23,7 +23,7 @@ OCR
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -39,7 +39,15 @@ OCR
 
 </Property>
 
-<ExpandableSection title="ResponseFormat" id="operation-ocr_v1_ocr_post+request+ResponseFormat">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ResponseFormat \{#operation-ocr_v1_ocr_post+request+ResponseFormat\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-ocr_v1_ocr_post+request+ResponseFormat+properties\}
 
@@ -51,7 +59,15 @@ OCR
 
 </Property>
 
-<ExpandableSection title="JsonSchema" id="operation-ocr_v1_ocr_post+request+ResponseFormat+JsonSchema">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### JsonSchema \{#operation-ocr_v1_ocr_post+request+ResponseFormat+JsonSchema\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-ocr_v1_ocr_post+request+ResponseFormat+JsonSchema+properties\}
 
@@ -95,6 +111,8 @@ OCR
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -108,6 +126,8 @@ OCR
 </Property>
 
 An object specifying the format that the model must output. Setting to `\{ "type": "json_object" \}` enables JSON mode, which guarantees the message the model generates is in JSON. When using JSON mode you MUST also instruct the model to produce JSON yourself with a system or a user message.
+
+</SectionContent>
 
 </SectionContent>
 
@@ -125,7 +145,15 @@ An object specifying the format that the model must output. Setting to `\{ "type
 
 Document to run OCR on
 
-<ExpandableSection title="DocumentURLChunk" id="operation-ocr_v1_ocr_post+request+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk \{#operation-ocr_v1_ocr_post+request+DocumentURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-ocr_v1_ocr_post+request+DocumentURLChunk+properties\}
 
@@ -161,9 +189,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-ocr_v1_ocr_post+request+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk \{#operation-ocr_v1_ocr_post+request+ImageURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -177,7 +215,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-ocr_v1_ocr_post+request+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL \{#operation-ocr_v1_ocr_post+request+ImageURLChunk+ImageURL\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-ocr_v1_ocr_post+request+ImageURLChunk+ImageURL+properties\}
 
@@ -201,6 +247,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -217,6 +265,8 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -229,7 +279,15 @@ _Default Value:_ `"image_url"`
 
 </Property>
 
-<ExpandableSection title="ResponseFormat" id="operation-ocr_v1_ocr_post+request+ResponseFormat">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ResponseFormat \{#operation-ocr_v1_ocr_post+request+ResponseFormat\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-ocr_v1_ocr_post+request+ResponseFormat+properties\}
 
@@ -241,7 +299,15 @@ _Default Value:_ `"image_url"`
 
 </Property>
 
-<ExpandableSection title="JsonSchema" id="operation-ocr_v1_ocr_post+request+ResponseFormat+JsonSchema">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### JsonSchema \{#operation-ocr_v1_ocr_post+request+ResponseFormat+JsonSchema\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-ocr_v1_ocr_post+request+ResponseFormat+JsonSchema+properties\}
 
@@ -285,6 +351,8 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -298,6 +366,8 @@ _Default Value:_ `"image_url"`
 </Property>
 
 An object specifying the format that the model must output. Setting to `\{ "type": "json_object" \}` enables JSON mode, which guarantees the message the model generates is in JSON. When using JSON mode you MUST also instruct the model to produce JSON yourself with a system or a user message.
+
+</SectionContent>
 
 </SectionContent>
 
@@ -375,7 +445,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-ocr_v1_ocr_post+responses\}
+### Response \{#operation-ocr_v1_ocr_post+responses\}
 
 </SectionTitle>
 
@@ -389,7 +459,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
 
 Successful Response
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -429,7 +499,15 @@ The model used to generate the OCR.
 
 List of OCR info for pages.
 
-<ExpandableSection title="OCRPageObject" id="operation-ocr_v1_ocr_post+200+application-json+OCRPageObject">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### OCRPageObject \{#operation-ocr_v1_ocr_post+200+application-json+OCRPageObject\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-ocr_v1_ocr_post+200+application-json+OCRPageObject+properties\}
 
@@ -441,7 +519,15 @@ List of OCR info for pages.
 
 </Property>
 
-<ExpandableSection title="OCRPageDimensions" id="operation-ocr_v1_ocr_post+200+application-json+OCRPageObject+OCRPageDimensions">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### OCRPageDimensions \{#operation-ocr_v1_ocr_post+200+application-json+OCRPageObject+OCRPageDimensions\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 The dimensions of the PDF Page's screenshot image
 
@@ -483,6 +569,8 @@ Width of the image in pixels
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -497,7 +585,15 @@ Width of the image in pixels
 
 List of all extracted images in the page
 
-<ExpandableSection title="OCRImageObject" id="operation-ocr_v1_ocr_post+200+application-json+OCRPageObject+OCRImageObject">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### OCRImageObject \{#operation-ocr_v1_ocr_post+200+application-json+OCRPageObject+OCRImageObject\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-ocr_v1_ocr_post+200+application-json+OCRPageObject+OCRImageObject+properties\}
 
@@ -573,6 +669,8 @@ Image ID for extracted image in a page
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -601,6 +699,8 @@ The markdown string response of the page
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -613,7 +713,15 @@ The markdown string response of the page
 
 </Property>
 
-<ExpandableSection title="OCRUsageInfo" id="operation-ocr_v1_ocr_post+200+application-json+OCRUsageInfo">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### OCRUsageInfo \{#operation-ocr_v1_ocr_post+200+application-json+OCRUsageInfo\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-ocr_v1_ocr_post+200+application-json+OCRUsageInfo+properties\}
 
@@ -638,98 +746,6 @@ The markdown string response of the page
 Number of pages processed
 
 </SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-<SectionTab slot="tab" id="operation-ocr_v1_ocr_post+422+application-json">
-
-422
-
-</SectionTab>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-ocr_v1_ocr_post+422+application-json">
-
-Validation Error
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-ocr_v1_ocr_post+422+application-json+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+422+application-json+Security\">Security</a>","children":[],"breakoutSubTypes":[{"label":"Security","schema":{"type":"object","description":null,"examples":[],"properties":{"ApiKey":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["ApiKey"],"name":"Security","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### HttpMeta \{#operation-ocr_v1_ocr_post+422+application-json+HttpMeta\}
-
-</Property>
-
-<ExpandableSection title="Security" id="operation-ocr_v1_ocr_post+422+application-json+Security">
-
-#### Properties \{#operation-ocr_v1_ocr_post+422+application-json+Security+properties\}
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-ocr_v1_ocr_post+422+application-json+Security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+422+application-json+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+422+application-json+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### detail \{#operation-ocr_v1_ocr_post+422+application-json+detail\}
-
-</Property>
-
-<ExpandableSection title="ValidationError" id="operation-ocr_v1_ocr_post+422+application-json+ValidationError">
-
-#### Properties \{#operation-ocr_v1_ocr_post+422+application-json+ValidationError+properties\}
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### loc \{#operation-ocr_v1_ocr_post+422+application-json+ValidationError+loc\}
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### msg \{#operation-ocr_v1_ocr_post+422+application-json+ValidationError+msg\}
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### type \{#operation-ocr_v1_ocr_post+422+application-json+ValidationError+type\}
-
-</Property>
 
 </SectionContent>
 
