--- a/examples/docusaurus/petstore/docs/api/tag/utility.mdx
+++ b/examples/docusaurus/petstore/docs/api/tag/utility.mdx
@@ -3,7 +3,8 @@ sidebar_position: 2.10
 sidebar_label: Utility
 ---
 
-import { Pill, Section, SectionTitle, SectionContent, ExpandableSection, TabbedSection, SectionTab } from "@speakeasy-api/docs-md/docusaurus";
+import "@speakeasy-api/docs-md/docusaurus.css";
+import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSection, TabbedSection, SectionTab } from "@speakeasy-api/docs-md/docusaurus";
 
 
 # Utility Operations \{#utility\}
@@ -14,7 +15,7 @@ _List languages_
 
 Languages for translations of API resource information.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -24,7 +25,7 @@ Languages for translations of API resource information.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -34,21 +35,43 @@ Languages for translations of API resource information.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### basicAuth <Pill variant="info"><a href="#operation-api_v2_language_list+security+SchemeBasicAuth">SchemeBasicAuth</a></Pill> \{#operation-api_v2_language_list+security+basicAuth\}
+<Property typeInfo={{"label":"SchemeBasicAuth","linkedLabel":"<a href=\"#operation-api_v2_language_list+security+SchemeBasicAuth\">SchemeBasicAuth</a>","children":[],"breakoutSubTypes":[{"label":"SchemeBasicAuth","schema":{"type":"object","description":null,"examples":[],"properties":{"Password":{"type":"string","description":null,"examples":[],"defaultValue":null},"Username":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["Username","Password"],"name":"SchemeBasicAuth","defaultValue":null}}]}} typeAnnotations={[]}>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_language_list+security+SchemeBasicAuth">
+##### basicAuth \{#operation-api_v2_language_list+security+basicAuth\}
+
+</Property>
+
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth \{#operation-api_v2_language_list+security+SchemeBasicAuth\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-api_v2_language_list+security+SchemeBasicAuth+properties\}
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### Password <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_language_list+security+SchemeBasicAuth+Password\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### Password \{#operation-api_v2_language_list+security+SchemeBasicAuth+Password\}
+
+</Property>
 
 </SectionContent>
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### Username <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_language_list+security+SchemeBasicAuth+Username\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### Username \{#operation-api_v2_language_list+security+SchemeBasicAuth+Username\}
+
+</Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -58,7 +81,11 @@ Languages for translations of API resource information.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### cookieAuth <Pill variant="info">string</Pill> \{#operation-api_v2_language_list+security+cookieAuth\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+
+##### cookieAuth \{#operation-api_v2_language_list+security+cookieAuth\}
+
+</Property>
 
 </SectionContent>
 
@@ -68,7 +95,7 @@ Languages for translations of API resource information.
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -82,7 +109,7 @@ Languages for translations of API resource information.
 
 Number of results to return per page.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -92,7 +119,11 @@ Number of results to return per page.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### Security <Pill variant="warning">required</Pill> <Pill variant="info">integer</Pill> \{#operation-api_v2_language_list+parameters+Security\}
+<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### Security \{#operation-api_v2_language_list+parameters+Security\}
+
+</Property>
 
 Number of results to return per page.
 
@@ -108,7 +139,7 @@ Number of results to return per page.
 
 The initial index from which to return the results.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -118,7 +149,11 @@ The initial index from which to return the results.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### Security <Pill variant="warning">required</Pill> <Pill variant="info">integer</Pill> \{#operation-api_v2_language_list+parameters+Security\}
+<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### Security \{#operation-api_v2_language_list+parameters+Security\}
+
+</Property>
 
 The initial index from which to return the results.
 
@@ -135,7 +170,7 @@ The initial index from which to return the results.
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -145,7 +180,11 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### Security <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_language_list+parameters+Security\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### Security \{#operation-api_v2_language_list+parameters+Security\}
+
+</Property>
 
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
@@ -162,7 +201,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-api_v2_language_list+responses\}
+### Response \{#operation-api_v2_language_list+responses\}
 
 </SectionTitle>
 
@@ -174,7 +213,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_language_list+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -184,7 +223,11 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### count <Pill variant="info">integer</Pill> \{#operation-api_v2_language_list+200+application-json+count\}
+<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+
+##### count \{#operation-api_v2_language_list+200+application-json+count\}
+
+</Property>
 
 _Example:_
 
@@ -196,7 +239,11 @@ _Example:_
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### next <Pill variant="info">string | null</Pill> \{#operation-api_v2_language_list+200+application-json+next\}
+<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+
+##### next \{#operation-api_v2_language_list+200+application-json+next\}
+
+</Property>
 
 _Example:_
 
@@ -208,7 +255,11 @@ http://api.example.org/accounts/?offset=400&limit=100
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### previous <Pill variant="info">string | null</Pill> \{#operation-api_v2_language_list+200+application-json+previous\}
+<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+
+##### previous \{#operation-api_v2_language_list+200+application-json+previous\}
+
+</Property>
 
 _Example:_
 
@@ -220,21 +271,43 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### results <Pill variant="info">array&lt;<a href="#operation-api_v2_language_list+200+application-json+LanguageSummary">LanguageSummary</a>&gt;</Pill> \{#operation-api_v2_language_list+200+application-json+results\}
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list+200+application-json+LanguageSummary\">LanguageSummary</a>","children":[{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list+200+application-json+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":[{"label":"LanguageSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"name":{"type":"string","description":null,"examples":[],"defaultValue":null},"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","url"],"name":"LanguageSummary","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"LanguageSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"name":{"type":"string","description":null,"examples":[],"defaultValue":null},"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","url"],"name":"LanguageSummary","defaultValue":null}}]}} typeAnnotations={[]}>
 
-<ExpandableSection title="LanguageSummary" id="operation-api_v2_language_list+200+application-json+LanguageSummary">
+##### results \{#operation-api_v2_language_list+200+application-json+results\}
+
+</Property>
+
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### LanguageSummary \{#operation-api_v2_language_list+200+application-json+LanguageSummary\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-api_v2_language_list+200+application-json+LanguageSummary+properties\}
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### name <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_language_list+200+application-json+LanguageSummary+name\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### name \{#operation-api_v2_language_list+200+application-json+LanguageSummary+name\}
+
+</Property>
 
 </SectionContent>
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### url <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_language_list+200+application-json+LanguageSummary+url\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### url \{#operation-api_v2_language_list+200+application-json+LanguageSummary+url\}
+
+</Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -254,7 +327,7 @@ _Get language_
 
 Languages for translations of API resource information.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -264,7 +337,7 @@ Languages for translations of API resource information.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -274,21 +347,43 @@ Languages for translations of API resource information.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### basicAuth <Pill variant="info"><a href="#operation-api_v2_language_retrieve+security+SchemeBasicAuth">SchemeBasicAuth</a></Pill> \{#operation-api_v2_language_retrieve+security+basicAuth\}
+<Property typeInfo={{"label":"SchemeBasicAuth","linkedLabel":"<a href=\"#operation-api_v2_language_retrieve+security+SchemeBasicAuth\">SchemeBasicAuth</a>","children":[],"breakoutSubTypes":[{"label":"SchemeBasicAuth","schema":{"type":"object","description":null,"examples":[],"properties":{"Password":{"type":"string","description":null,"examples":[],"defaultValue":null},"Username":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["Username","Password"],"name":"SchemeBasicAuth","defaultValue":null}}]}} typeAnnotations={[]}>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_language_retrieve+security+SchemeBasicAuth">
+##### basicAuth \{#operation-api_v2_language_retrieve+security+basicAuth\}
+
+</Property>
+
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth \{#operation-api_v2_language_retrieve+security+SchemeBasicAuth\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-api_v2_language_retrieve+security+SchemeBasicAuth+properties\}
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### Password <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_language_retrieve+security+SchemeBasicAuth+Password\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### Password \{#operation-api_v2_language_retrieve+security+SchemeBasicAuth+Password\}
+
+</Property>
 
 </SectionContent>
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### Username <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_language_retrieve+security+SchemeBasicAuth+Username\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### Username \{#operation-api_v2_language_retrieve+security+SchemeBasicAuth+Username\}
+
+</Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -298,7 +393,11 @@ Languages for translations of API resource information.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### cookieAuth <Pill variant="info">string</Pill> \{#operation-api_v2_language_retrieve+security+cookieAuth\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+
+##### cookieAuth \{#operation-api_v2_language_retrieve+security+cookieAuth\}
+
+</Property>
 
 </SectionContent>
 
@@ -308,7 +407,7 @@ Languages for translations of API resource information.
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -322,7 +421,7 @@ Languages for translations of API resource information.
 
 This parameter can be a string or an integer.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -332,7 +431,11 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### Security <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_language_retrieve+parameters+Security\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### Security \{#operation-api_v2_language_retrieve+parameters+Security\}
+
+</Property>
 
 This parameter can be a string or an integer.
 
@@ -348,7 +451,7 @@ This parameter can be a string or an integer.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-api_v2_language_retrieve+responses\}
+### Response \{#operation-api_v2_language_retrieve+responses\}
 
 </SectionTitle>
 
@@ -360,7 +463,7 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_language_retrieve+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -370,53 +473,103 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### id <Pill variant="warning">required</Pill> <Pill variant="info">integer</Pill> \{#operation-api_v2_language_retrieve+200+application-json+id\}
+<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### id \{#operation-api_v2_language_retrieve+200+application-json+id\}
+
+</Property>
 
 </SectionContent>
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### iso3166 <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_language_retrieve+200+application-json+iso3166\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### iso3166 \{#operation-api_v2_language_retrieve+200+application-json+iso3166\}
+
+</Property>
 
 </SectionContent>
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### iso639 <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_language_retrieve+200+application-json+iso639\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### iso639 \{#operation-api_v2_language_retrieve+200+application-json+iso639\}
+
+</Property>
 
 </SectionContent>
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### name <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_language_retrieve+200+application-json+name\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### name \{#operation-api_v2_language_retrieve+200+application-json+name\}
+
+</Property>
 
 </SectionContent>
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### names <Pill variant="warning">required</Pill> <Pill variant="info">array&lt;<a href="#operation-api_v2_language_retrieve+200+application-json+LanguageName">LanguageName</a>&gt;</Pill> \{#operation-api_v2_language_retrieve+200+application-json+names\}
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_retrieve+200+application-json+LanguageName\">LanguageName</a>","children":[{"label":"LanguageName","linkedLabel":"<a href=\"#operation-api_v2_language_retrieve+200+application-json+LanguageName\">LanguageName</a>","children":[],"breakoutSubTypes":[{"label":"LanguageName","schema":{"type":"object","description":null,"examples":[],"properties":{"language":{"type":"chunk","chunkId":"$18"},"name":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","language"],"name":"LanguageName","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"LanguageName","schema":{"type":"object","description":null,"examples":[],"properties":{"language":{"type":"chunk","chunkId":"$18"},"name":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","language"],"name":"LanguageName","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<ExpandableSection title="LanguageName" id="operation-api_v2_language_retrieve+200+application-json+LanguageName">
+##### names \{#operation-api_v2_language_retrieve+200+application-json+names\}
+
+</Property>
+
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### LanguageName \{#operation-api_v2_language_retrieve+200+application-json+LanguageName\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-api_v2_language_retrieve+200+application-json+LanguageName+properties\}
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### language <Pill variant="warning">required</Pill> <Pill variant="info"><a href="#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary">LanguageSummary</a></Pill> \{#operation-api_v2_language_retrieve+200+application-json+LanguageName+language\}
+<Property typeInfo={{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":[{"label":"LanguageSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"name":{"type":"string","description":null,"examples":[],"defaultValue":null},"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","url"],"name":"LanguageSummary","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<ExpandableSection title="LanguageSummary" id="operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary">
+##### language \{#operation-api_v2_language_retrieve+200+application-json+LanguageName+language\}
+
+</Property>
+
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### LanguageSummary \{#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary+properties\}
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### name <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary+name\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### name \{#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary+name\}
+
+</Property>
 
 </SectionContent>
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### url <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary+url\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### url \{#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary+url\}
+
+</Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -426,7 +579,13 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### name <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_language_retrieve+200+application-json+LanguageName+name\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### name \{#operation-api_v2_language_retrieve+200+application-json+LanguageName+name\}
+
+</Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -436,7 +595,11 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### official <Pill variant="info">boolean</Pill> \{#operation-api_v2_language_retrieve+200+application-json+official\}
+<Property typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+
+##### official \{#operation-api_v2_language_retrieve+200+application-json+official\}
+
+</Property>
 
 </SectionContent>
 
