--- a/examples/nextra/mistral/src/app/api/tag/chat/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/chat/page.mdx
@@ -12,7 +12,7 @@ import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSectio
 
 Chat Completion
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -22,7 +22,7 @@ Chat Completion
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -62,7 +62,15 @@ frequency_penalty penalizes the repetition of words based on their frequency in 
 
 The prompt(s) to generate completions for, encoded as a list of dict with role and content.
 
-<ExpandableSection title="SystemMessage" id="operation-chat_completion_v1_chat_completions_post+request+SystemMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SystemMessage [#operation-chat_completion_v1_chat_completions_post+request+SystemMessage]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+SystemMessage+properties]
 
@@ -74,7 +82,15 @@ The prompt(s) to generate completions for, encoded as a list of dict with role a
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-chat_completion_v1_chat_completions_post+request+SystemMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk [#operation-chat_completion_v1_chat_completions_post+request+SystemMessage+TextChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+SystemMessage+TextChunk+properties]
 
@@ -100,6 +116,8 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -116,9 +134,19 @@ _Default Value:_ `"system"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="UserMessage" id="operation-chat_completion_v1_chat_completions_post+request+UserMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### UserMessage [#operation-chat_completion_v1_chat_completions_post+request+UserMessage]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+UserMessage+properties]
 
@@ -130,7 +158,15 @@ _Default Value:_ `"system"`
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-chat_completion_v1_chat_completions_post+request+UserMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk [#operation-chat_completion_v1_chat_completions_post+request+UserMessage+TextChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+UserMessage+TextChunk+properties]
 
@@ -156,9 +192,19 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-chat_completion_v1_chat_completions_post+request+UserMessage+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk [#operation-chat_completion_v1_chat_completions_post+request+UserMessage+ImageURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -172,7 +218,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-chat_completion_v1_chat_completions_post+request+UserMessage+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL [#operation-chat_completion_v1_chat_completions_post+request+UserMessage+ImageURLChunk+ImageURL]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+UserMessage+ImageURLChunk+ImageURL+properties]
 
@@ -196,6 +250,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -212,9 +268,19 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="DocumentURLChunk" id="operation-chat_completion_v1_chat_completions_post+request+UserMessage+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk [#operation-chat_completion_v1_chat_completions_post+request+UserMessage+DocumentURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+UserMessage+DocumentURLChunk+properties]
 
@@ -250,9 +316,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ReferenceChunk" id="operation-chat_completion_v1_chat_completions_post+request+UserMessage+ReferenceChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ReferenceChunk [#operation-chat_completion_v1_chat_completions_post+request+UserMessage+ReferenceChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+UserMessage+ReferenceChunk+properties]
 
@@ -278,6 +354,8 @@ _Default Value:_ `"reference"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -294,9 +372,19 @@ _Default Value:_ `"user"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="AssistantMessage" id="operation-chat_completion_v1_chat_completions_post+request+AssistantMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### AssistantMessage [#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+properties]
 
@@ -308,7 +396,15 @@ _Default Value:_ `"user"`
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk [#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+TextChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+TextChunk+properties]
 
@@ -334,9 +430,19 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk [#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ImageURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -350,7 +456,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL [#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ImageURLChunk+ImageURL]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ImageURLChunk+ImageURL+properties]
 
@@ -374,6 +488,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -390,9 +506,19 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="DocumentURLChunk" id="operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk [#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+DocumentURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+DocumentURLChunk+properties]
 
@@ -428,9 +554,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ReferenceChunk" id="operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ReferenceChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ReferenceChunk [#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ReferenceChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ReferenceChunk+properties]
 
@@ -453,6 +589,8 @@ _Default Value:_ `"document_url"`
 </Property>
 
 _Default Value:_ `"reference"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -494,7 +632,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="ToolCall" id="operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ToolCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ToolCall [#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ToolCall]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ToolCall+properties]
 
@@ -506,7 +652,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="FunctionCall" id="operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ToolCall+FunctionCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### FunctionCall [#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ToolCall+FunctionCall]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ToolCall+FunctionCall+properties]
 
@@ -527,6 +681,8 @@ _Default Value:_ `"assistant"`
 ##### name [#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ToolCall+FunctionCall+name]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -568,13 +724,25 @@ _Default Value:_ `0`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
+
+</SectionContent>
 
 </SectionContent>
 
 </ExpandableSection>
 
-<ExpandableSection title="ToolMessage" id="operation-chat_completion_v1_chat_completions_post+request+ToolMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ToolMessage [#operation-chat_completion_v1_chat_completions_post+request+ToolMessage]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+properties]
 
@@ -586,7 +754,15 @@ _Default Value:_ `0`
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-chat_completion_v1_chat_completions_post+request+ToolMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk [#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+TextChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+TextChunk+properties]
 
@@ -612,9 +788,19 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-chat_completion_v1_chat_completions_post+request+ToolMessage+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk [#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+ImageURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -628,7 +814,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-chat_completion_v1_chat_completions_post+request+ToolMessage+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL [#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+ImageURLChunk+ImageURL]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+ImageURLChunk+ImageURL+properties]
 
@@ -652,6 +846,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -668,9 +864,19 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="DocumentURLChunk" id="operation-chat_completion_v1_chat_completions_post+request+ToolMessage+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk [#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+DocumentURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+DocumentURLChunk+properties]
 
@@ -706,9 +912,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ReferenceChunk" id="operation-chat_completion_v1_chat_completions_post+request+ToolMessage+ReferenceChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ReferenceChunk [#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+ReferenceChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+ReferenceChunk+properties]
 
@@ -731,6 +947,8 @@ _Default Value:_ `"document_url"`
 </Property>
 
 _Default Value:_ `"reference"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -767,6 +985,8 @@ _Default Value:_ `"tool"`
 ##### tool_call_id [#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+tool_call_id]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -820,7 +1040,15 @@ mistral-small-latest
 
 </Property>
 
-<ExpandableSection title="Prediction" id="operation-chat_completion_v1_chat_completions_post+request+Prediction">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### Prediction [#operation-chat_completion_v1_chat_completions_post+request+Prediction]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+Prediction+properties]
 
@@ -845,6 +1073,8 @@ _Default Value:_ `""`
 </Property>
 
 _Default Value:_ `"content"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -892,7 +1122,15 @@ presence_penalty determines how much the model penalizes the repetition of words
 
 </Property>
 
-<ExpandableSection title="ResponseFormat" id="operation-chat_completion_v1_chat_completions_post+request+ResponseFormat">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ResponseFormat [#operation-chat_completion_v1_chat_completions_post+request+ResponseFormat]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+ResponseFormat+properties]
 
@@ -904,7 +1142,15 @@ presence_penalty determines how much the model penalizes the repetition of words
 
 </Property>
 
-<ExpandableSection title="JsonSchema" id="operation-chat_completion_v1_chat_completions_post+request+ResponseFormat+JsonSchema">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### JsonSchema [#operation-chat_completion_v1_chat_completions_post+request+ResponseFormat+JsonSchema]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+ResponseFormat+JsonSchema+properties]
 
@@ -948,6 +1194,8 @@ presence_penalty determines how much the model penalizes the repetition of words
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -961,6 +1209,8 @@ presence_penalty determines how much the model penalizes the repetition of words
 </Property>
 
 An object specifying the format that the model must output. Setting to `\{ "type": "json_object" \}` enables JSON mode, which guarantees the message the model generates is in JSON. When using JSON mode you MUST also instruct the model to produce JSON yourself with a system or a user message.
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1024,7 +1274,15 @@ _Default Value:_ `false`
 
 </Property>
 
-<ExpandableSection title="ToolChoice" id="operation-chat_completion_v1_chat_completions_post+request+ToolChoice">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ToolChoice [#operation-chat_completion_v1_chat_completions_post+request+ToolChoice]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 ToolChoice is either a ToolChoiceEnum or a ToolChoice
 
@@ -1040,7 +1298,15 @@ ToolChoice is either a ToolChoiceEnum or a ToolChoice
 
 this restriction of `Function` is used to select a specific function to call
 
-<ExpandableSection title="FunctionName" id="operation-chat_completion_v1_chat_completions_post+request+ToolChoice+FunctionName">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### FunctionName [#operation-chat_completion_v1_chat_completions_post+request+ToolChoice+FunctionName]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 this restriction of `Function` is used to select a specific function to call
 
@@ -1053,6 +1319,8 @@ this restriction of `Function` is used to select a specific function to call
 ##### name [#operation-chat_completion_v1_chat_completions_post+request+ToolChoice+FunctionName+name]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1070,6 +1338,8 @@ this restriction of `Function` is used to select a specific function to call
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1082,7 +1352,15 @@ this restriction of `Function` is used to select a specific function to call
 
 </Property>
 
-<ExpandableSection title="Tool" id="operation-chat_completion_v1_chat_completions_post+request+Tool">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### Tool [#operation-chat_completion_v1_chat_completions_post+request+Tool]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+Tool+properties]
 
@@ -1094,7 +1372,15 @@ this restriction of `Function` is used to select a specific function to call
 
 </Property>
 
-<ExpandableSection title="Function" id="operation-chat_completion_v1_chat_completions_post+request+Tool+Function">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### Function [#operation-chat_completion_v1_chat_completions_post+request+Tool+Function]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+request+Tool+Function+properties]
 
@@ -1138,6 +1424,8 @@ this restriction of `Function` is used to select a specific function to call
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1149,6 +1437,8 @@ this restriction of `Function` is used to select a specific function to call
 ##### type [#operation-chat_completion_v1_chat_completions_post+request+Tool+type]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1192,7 +1482,7 @@ Nucleus sampling, where the model considers the results of the tokens with `top_
 
 Successful Response
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1208,7 +1498,15 @@ Successful Response
 
 </Property>
 
-<ExpandableSection title="ChatCompletionChoice" id="operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ChatCompletionChoice [#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+properties]
 
@@ -1252,7 +1550,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="AssistantMessage" id="operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### AssistantMessage [#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+properties]
 
@@ -1264,7 +1570,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk [#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+TextChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+TextChunk+properties]
 
@@ -1290,9 +1604,19 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk [#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -1306,7 +1630,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL [#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk+ImageURL]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk+ImageURL+properties]
 
@@ -1330,6 +1662,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1346,9 +1680,19 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="DocumentURLChunk" id="operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk [#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+DocumentURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+DocumentURLChunk+properties]
 
@@ -1384,9 +1728,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ReferenceChunk" id="operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ReferenceChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ReferenceChunk [#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ReferenceChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ReferenceChunk+properties]
 
@@ -1409,6 +1763,8 @@ _Default Value:_ `"document_url"`
 </Property>
 
 _Default Value:_ `"reference"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1450,7 +1806,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="ToolCall" id="operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ToolCall [#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+properties]
 
@@ -1462,7 +1826,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="FunctionCall" id="operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### FunctionCall [#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall+properties]
 
@@ -1483,6 +1855,8 @@ _Default Value:_ `"assistant"`
 ##### name [#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall+name]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1524,11 +1898,17 @@ _Default Value:_ `0`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1608,7 +1988,15 @@ chat.completion
 
 </Property>
 
-<ExpandableSection title="UsageInfo" id="operation-chat_completion_v1_chat_completions_post+200+application-json+UsageInfo">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### UsageInfo [#operation-chat_completion_v1_chat_completions_post+200+application-json+UsageInfo]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-chat_completion_v1_chat_completions_post+200+application-json+UsageInfo+properties]
 
@@ -1657,6 +2045,8 @@ _Example:_
 ```
 50
 ```
+
+</SectionContent>
 
 </SectionContent>
 
