--- a/examples/nextra/mistral/src/app/api/tag/models/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/models/page.mdx
@@ -32,7 +32,7 @@ List all models available to the user.
 
 Successful Response
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -48,7 +48,15 @@ Successful Response
 
 </Property>
 
-<ExpandableSection title="BaseModelCard" id="operation-list_models_v1_models_get+200+application-json+BaseModelCard">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BaseModelCard [#operation-list_models_v1_models_get+200+application-json+BaseModelCard]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-list_models_v1_models_get+200+application-json+BaseModelCard+properties]
 
@@ -70,7 +78,15 @@ Successful Response
 
 </Property>
 
-<ExpandableSection title="ModelCapabilities" id="operation-list_models_v1_models_get+200+application-json+BaseModelCard+ModelCapabilities">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ModelCapabilities [#operation-list_models_v1_models_get+200+application-json+BaseModelCard+ModelCapabilities]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-list_models_v1_models_get+200+application-json+BaseModelCard+ModelCapabilities+properties]
 
@@ -131,6 +147,8 @@ _Default Value:_ `true`
 </Property>
 
 _Default Value:_ `false`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -246,9 +264,19 @@ _Default Value:_ `"base"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="FTModelCard" id="operation-list_models_v1_models_get+200+application-json+FTModelCard">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### FTModelCard [#operation-list_models_v1_models_get+200+application-json+FTModelCard]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 Extra fields for fine-tuned models.
 
@@ -284,7 +312,15 @@ _Default Value:_ `false`
 
 </Property>
 
-<ExpandableSection title="ModelCapabilities" id="operation-list_models_v1_models_get+200+application-json+FTModelCard+ModelCapabilities">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ModelCapabilities [#operation-list_models_v1_models_get+200+application-json+FTModelCard+ModelCapabilities]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-list_models_v1_models_get+200+application-json+FTModelCard+ModelCapabilities+properties]
 
@@ -345,6 +381,8 @@ _Default Value:_ `true`
 </Property>
 
 _Default Value:_ `false`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -480,6 +518,8 @@ _Default Value:_ `"fine-tuned"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -508,7 +548,7 @@ _Retrieve Model_
 
 Retrieve a model information.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -522,7 +562,7 @@ Retrieve a model information.
 
 The ID of the model to retrieve.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -572,7 +612,7 @@ ft:open-mistral-7b:587a6b29:20240514:7e773925
 
 Successful Response
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -604,7 +644,7 @@ _Delete Model_
 
 Delete a fine-tuned model.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -618,7 +658,7 @@ Delete a fine-tuned model.
 
 The ID of the model to delete.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -668,7 +708,7 @@ ft:open-mistral-7b:587a6b29:20240514:7e773925
 
 Successful Response
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -740,7 +780,7 @@ _Update Fine Tuned Model_
 
 Update a model name or description.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -754,7 +794,7 @@ Update a model name or description.
 
 The ID of the model to update.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -786,7 +826,7 @@ ft:open-mistral-7b:587a6b29:20240514:7e773925
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -796,7 +836,7 @@ ft:open-mistral-7b:587a6b29:20240514:7e773925
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -848,7 +888,7 @@ ft:open-mistral-7b:587a6b29:20240514:7e773925
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -880,7 +920,7 @@ _Archive Fine Tuned Model_
 
 Archive a fine-tuned model.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -894,7 +934,7 @@ Archive a fine-tuned model.
 
 The ID of the model to archive.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -944,7 +984,7 @@ ft:open-mistral-7b:587a6b29:20240514:7e773925
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -998,7 +1038,7 @@ _Unarchive Fine Tuned Model_
 
 Un-archive a fine-tuned model.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1012,7 +1052,7 @@ Un-archive a fine-tuned model.
 
 The ID of the model to unarchive.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1062,7 +1102,7 @@ ft:open-mistral-7b:587a6b29:20240514:7e773925
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
