--- a/examples/nextra/mistral/src/app/api/tag/ocr/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/ocr/page.mdx
@@ -12,7 +12,7 @@ import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSectio
 
 OCR
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -22,7 +22,7 @@ OCR
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -38,7 +38,15 @@ OCR
 
 </Property>
 
-<ExpandableSection title="ResponseFormat" id="operation-ocr_v1_ocr_post+request+ResponseFormat">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ResponseFormat [#operation-ocr_v1_ocr_post+request+ResponseFormat]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-ocr_v1_ocr_post+request+ResponseFormat+properties]
 
@@ -50,7 +58,15 @@ OCR
 
 </Property>
 
-<ExpandableSection title="JsonSchema" id="operation-ocr_v1_ocr_post+request+ResponseFormat+JsonSchema">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### JsonSchema [#operation-ocr_v1_ocr_post+request+ResponseFormat+JsonSchema]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-ocr_v1_ocr_post+request+ResponseFormat+JsonSchema+properties]
 
@@ -94,6 +110,8 @@ OCR
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -107,6 +125,8 @@ OCR
 </Property>
 
 An object specifying the format that the model must output. Setting to `\{ "type": "json_object" \}` enables JSON mode, which guarantees the message the model generates is in JSON. When using JSON mode you MUST also instruct the model to produce JSON yourself with a system or a user message.
+
+</SectionContent>
 
 </SectionContent>
 
@@ -124,7 +144,15 @@ An object specifying the format that the model must output. Setting to `\{ "type
 
 Document to run OCR on
 
-<ExpandableSection title="DocumentURLChunk" id="operation-ocr_v1_ocr_post+request+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk [#operation-ocr_v1_ocr_post+request+DocumentURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-ocr_v1_ocr_post+request+DocumentURLChunk+properties]
 
@@ -160,9 +188,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-ocr_v1_ocr_post+request+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk [#operation-ocr_v1_ocr_post+request+ImageURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -176,7 +214,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-ocr_v1_ocr_post+request+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL [#operation-ocr_v1_ocr_post+request+ImageURLChunk+ImageURL]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-ocr_v1_ocr_post+request+ImageURLChunk+ImageURL+properties]
 
@@ -200,6 +246,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -216,6 +264,8 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -228,7 +278,15 @@ _Default Value:_ `"image_url"`
 
 </Property>
 
-<ExpandableSection title="ResponseFormat" id="operation-ocr_v1_ocr_post+request+ResponseFormat">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ResponseFormat [#operation-ocr_v1_ocr_post+request+ResponseFormat]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-ocr_v1_ocr_post+request+ResponseFormat+properties]
 
@@ -240,7 +298,15 @@ _Default Value:_ `"image_url"`
 
 </Property>
 
-<ExpandableSection title="JsonSchema" id="operation-ocr_v1_ocr_post+request+ResponseFormat+JsonSchema">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### JsonSchema [#operation-ocr_v1_ocr_post+request+ResponseFormat+JsonSchema]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-ocr_v1_ocr_post+request+ResponseFormat+JsonSchema+properties]
 
@@ -284,6 +350,8 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -297,6 +365,8 @@ _Default Value:_ `"image_url"`
 </Property>
 
 An object specifying the format that the model must output. Setting to `\{ "type": "json_object" \}` enables JSON mode, which guarantees the message the model generates is in JSON. When using JSON mode you MUST also instruct the model to produce JSON yourself with a system or a user message.
+
+</SectionContent>
 
 </SectionContent>
 
@@ -388,7 +458,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
 
 Successful Response
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -428,7 +498,15 @@ The model used to generate the OCR.
 
 List of OCR info for pages.
 
-<ExpandableSection title="OCRPageObject" id="operation-ocr_v1_ocr_post+200+application-json+OCRPageObject">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### OCRPageObject [#operation-ocr_v1_ocr_post+200+application-json+OCRPageObject]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-ocr_v1_ocr_post+200+application-json+OCRPageObject+properties]
 
@@ -440,7 +518,15 @@ List of OCR info for pages.
 
 </Property>
 
-<ExpandableSection title="OCRPageDimensions" id="operation-ocr_v1_ocr_post+200+application-json+OCRPageObject+OCRPageDimensions">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### OCRPageDimensions [#operation-ocr_v1_ocr_post+200+application-json+OCRPageObject+OCRPageDimensions]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 The dimensions of the PDF Page's screenshot image
 
@@ -482,6 +568,8 @@ Width of the image in pixels
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -496,7 +584,15 @@ Width of the image in pixels
 
 List of all extracted images in the page
 
-<ExpandableSection title="OCRImageObject" id="operation-ocr_v1_ocr_post+200+application-json+OCRPageObject+OCRImageObject">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### OCRImageObject [#operation-ocr_v1_ocr_post+200+application-json+OCRPageObject+OCRImageObject]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-ocr_v1_ocr_post+200+application-json+OCRPageObject+OCRImageObject+properties]
 
@@ -572,6 +668,8 @@ Image ID for extracted image in a page
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -600,6 +698,8 @@ The markdown string response of the page
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -612,7 +712,15 @@ The markdown string response of the page
 
 </Property>
 
-<ExpandableSection title="OCRUsageInfo" id="operation-ocr_v1_ocr_post+200+application-json+OCRUsageInfo">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### OCRUsageInfo [#operation-ocr_v1_ocr_post+200+application-json+OCRUsageInfo]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-ocr_v1_ocr_post+200+application-json+OCRUsageInfo+properties]
 
@@ -635,6 +743,8 @@ The markdown string response of the page
 </Property>
 
 Number of pages processed
+
+</SectionContent>
 
 </SectionContent>
 
