--- a/examples/nextra/petstore/src/app/api/tag/berries/page.mdx
+++ b/examples/nextra/petstore/src/app/api/tag/berries/page.mdx
@@ -2,6 +2,7 @@
 sidebarTitle: Berries
 ---
 
+import "@speakeasy-api/docs-md/nextra.css";
 import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSection, TabbedSection, SectionTab } from "@speakeasy-api/docs-md/nextra";
 
 
@@ -13,7 +14,7 @@ _List berries_
 
 Berries are small fruits that can provide HP and status condition restoration, stat enhancement, and even damage negation when eaten by Pokémon. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Berry) for greater detail.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -23,7 +24,7 @@ Berries are small fruits that can provide HP and status condition restoration, s
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -39,7 +40,15 @@ Berries are small fruits that can provide HP and status condition restoration, s
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_berry_list+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_berry_list+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_list+security+SchemeBasicAuth+properties]
 
@@ -63,6 +72,8 @@ Berries are small fruits that can provide HP and status condition restoration, s
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -83,7 +94,7 @@ Berries are small fruits that can provide HP and status condition restoration, s
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -97,7 +108,7 @@ Berries are small fruits that can provide HP and status condition restoration, s
 
 Number of results to return per page.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -127,7 +138,7 @@ Number of results to return per page.
 
 The initial index from which to return the results.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -158,7 +169,7 @@ The initial index from which to return the results.
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -189,7 +200,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_berry_list+responses]
+### Response [#operation-api_v2_berry_list+responses]
 
 </SectionTitle>
 
@@ -201,7 +212,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_berry_list+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -265,7 +276,15 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </Property>
 
-<ExpandableSection title="BerrySummary" id="operation-api_v2_berry_list+200+application-json+BerrySummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BerrySummary [#operation-api_v2_berry_list+200+application-json+BerrySummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_list+200+application-json+BerrySummary+properties]
 
@@ -289,6 +308,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -305,7 +326,7 @@ _Get a berry_
 
 Berries are small fruits that can provide HP and status condition restoration, stat enhancement, and even damage negation when eaten by Pokémon. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Berry) for greater detail.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -315,7 +336,7 @@ Berries are small fruits that can provide HP and status condition restoration, s
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -331,7 +352,15 @@ Berries are small fruits that can provide HP and status condition restoration, s
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_berry_retrieve+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_berry_retrieve+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_retrieve+security+SchemeBasicAuth+properties]
 
@@ -355,6 +384,8 @@ Berries are small fruits that can provide HP and status condition restoration, s
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -375,7 +406,7 @@ Berries are small fruits that can provide HP and status condition restoration, s
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -389,7 +420,7 @@ Berries are small fruits that can provide HP and status condition restoration, s
 
 This parameter can be a string or an integer.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -431,7 +462,7 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_berry_retrieve+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -447,7 +478,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="BerryFirmnessSummary" id="operation-api_v2_berry_retrieve+200+application-json+BerryFirmnessSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BerryFirmnessSummary [#operation-api_v2_berry_retrieve+200+application-json+BerryFirmnessSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_retrieve+200+application-json+BerryFirmnessSummary+properties]
 
@@ -471,6 +510,8 @@ This parameter can be a string or an integer.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -483,7 +524,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="flavor" id="operation-api_v2_berry_retrieve+200+application-json+flavor">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### flavor [#operation-api_v2_berry_retrieve+200+application-json+flavor]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_retrieve+200+application-json+flavor+properties]
 
@@ -512,6 +561,8 @@ _Example:_
 ```
 10
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -547,7 +598,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="ItemSummary" id="operation-api_v2_berry_retrieve+200+application-json+ItemSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ItemSummary [#operation-api_v2_berry_retrieve+200+application-json+ItemSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_retrieve+200+application-json+ItemSummary+properties]
 
@@ -568,6 +627,8 @@ _Example:_
 ##### url [#operation-api_v2_berry_retrieve+200+application-json+ItemSummary+url]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -613,7 +674,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="TypeSummary" id="operation-api_v2_berry_retrieve+200+application-json+TypeSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TypeSummary [#operation-api_v2_berry_retrieve+200+application-json+TypeSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_retrieve+200+application-json+TypeSummary+properties]
 
@@ -634,6 +703,8 @@ _Example:_
 ##### url [#operation-api_v2_berry_retrieve+200+application-json+TypeSummary+url]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -683,7 +754,7 @@ _Example:_
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_berry_retrieve+401+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -699,7 +770,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_berry_retrieve+401+application-json+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_berry_retrieve+401+application-json+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_retrieve+401+application-json+SchemeBasicAuth+properties]
 
@@ -723,6 +802,8 @@ _Example:_
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -735,7 +816,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="BerryFirmnessSummary" id="operation-api_v2_berry_retrieve+401+application-json+BerryFirmnessSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BerryFirmnessSummary [#operation-api_v2_berry_retrieve+401+application-json+BerryFirmnessSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_retrieve+401+application-json+BerryFirmnessSummary+properties]
 
@@ -759,6 +848,8 @@ _Example:_
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -771,7 +862,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="flavor" id="operation-api_v2_berry_retrieve+401+application-json+flavor">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### flavor [#operation-api_v2_berry_retrieve+401+application-json+flavor]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_retrieve+401+application-json+flavor+properties]
 
@@ -800,6 +899,8 @@ _Example:_
 ```
 10
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -835,7 +936,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="ItemSummary" id="operation-api_v2_berry_retrieve+401+application-json+ItemSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ItemSummary [#operation-api_v2_berry_retrieve+401+application-json+ItemSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_retrieve+401+application-json+ItemSummary+properties]
 
@@ -856,6 +965,8 @@ _Example:_
 ##### url [#operation-api_v2_berry_retrieve+401+application-json+ItemSummary+url]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -901,7 +1012,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="TypeSummary" id="operation-api_v2_berry_retrieve+401+application-json+TypeSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TypeSummary [#operation-api_v2_berry_retrieve+401+application-json+TypeSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_retrieve+401+application-json+TypeSummary+properties]
 
@@ -922,6 +1041,8 @@ _Example:_
 ##### url [#operation-api_v2_berry_retrieve+401+application-json+TypeSummary+url]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -971,7 +1092,7 @@ _List berry firmness_
 
 Berries can be soft or hard. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Category:Berries_by_firmness) for greater detail.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -981,7 +1102,7 @@ Berries can be soft or hard. Check out [Bulbapedia](http://bulbapedia.bulbagarde
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -997,7 +1118,15 @@ Berries can be soft or hard. Check out [Bulbapedia](http://bulbapedia.bulbagarde
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_berry_firmness_list+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_berry_firmness_list+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_firmness_list+security+SchemeBasicAuth+properties]
 
@@ -1021,6 +1150,8 @@ Berries can be soft or hard. Check out [Bulbapedia](http://bulbapedia.bulbagarde
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1041,7 +1172,7 @@ Berries can be soft or hard. Check out [Bulbapedia](http://bulbapedia.bulbagarde
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1055,7 +1186,7 @@ Berries can be soft or hard. Check out [Bulbapedia](http://bulbapedia.bulbagarde
 
 Number of results to return per page.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1085,7 +1216,7 @@ Number of results to return per page.
 
 The initial index from which to return the results.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1116,7 +1247,7 @@ The initial index from which to return the results.
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1147,7 +1278,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_berry_firmness_list+responses]
+### Response [#operation-api_v2_berry_firmness_list+responses]
 
 </SectionTitle>
 
@@ -1159,7 +1290,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_berry_firmness_list+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1223,7 +1354,15 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </Property>
 
-<ExpandableSection title="BerryFirmnessSummary" id="operation-api_v2_berry_firmness_list+200+application-json+BerryFirmnessSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BerryFirmnessSummary [#operation-api_v2_berry_firmness_list+200+application-json+BerryFirmnessSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_firmness_list+200+application-json+BerryFirmnessSummary+properties]
 
@@ -1247,6 +1386,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1263,7 +1404,7 @@ _Get berry by firmness_
 
 Berries can be soft or hard. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Category:Berries_by_firmness) for greater detail.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1273,7 +1414,7 @@ Berries can be soft or hard. Check out [Bulbapedia](http://bulbapedia.bulbagarde
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1289,7 +1430,15 @@ Berries can be soft or hard. Check out [Bulbapedia](http://bulbapedia.bulbagarde
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_berry_firmness_retrieve+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_berry_firmness_retrieve+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_firmness_retrieve+security+SchemeBasicAuth+properties]
 
@@ -1313,6 +1462,8 @@ Berries can be soft or hard. Check out [Bulbapedia](http://bulbapedia.bulbagarde
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1333,7 +1484,7 @@ Berries can be soft or hard. Check out [Bulbapedia](http://bulbapedia.bulbagarde
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1347,7 +1498,7 @@ Berries can be soft or hard. Check out [Bulbapedia](http://bulbapedia.bulbagarde
 
 This parameter can be a string or an integer.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1377,7 +1528,7 @@ This parameter can be a string or an integer.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_berry_firmness_retrieve+responses]
+### Response [#operation-api_v2_berry_firmness_retrieve+responses]
 
 </SectionTitle>
 
@@ -1389,7 +1540,7 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_berry_firmness_retrieve+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1405,7 +1556,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="BerrySummary" id="operation-api_v2_berry_firmness_retrieve+200+application-json+BerrySummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BerrySummary [#operation-api_v2_berry_firmness_retrieve+200+application-json+BerrySummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_firmness_retrieve+200+application-json+BerrySummary+properties]
 
@@ -1426,6 +1585,8 @@ This parameter can be a string or an integer.
 ##### url [#operation-api_v2_berry_firmness_retrieve+200+application-json+BerrySummary+url]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1461,7 +1622,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="BerryFirmnessName" id="operation-api_v2_berry_firmness_retrieve+200+application-json+BerryFirmnessName">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BerryFirmnessName [#operation-api_v2_berry_firmness_retrieve+200+application-json+BerryFirmnessName]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_firmness_retrieve+200+application-json+BerryFirmnessName+properties]
 
@@ -1473,7 +1642,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="LanguageSummary" id="operation-api_v2_berry_firmness_retrieve+200+application-json+BerryFirmnessName+LanguageSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### LanguageSummary [#operation-api_v2_berry_firmness_retrieve+200+application-json+BerryFirmnessName+LanguageSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_firmness_retrieve+200+application-json+BerryFirmnessName+LanguageSummary+properties]
 
@@ -1497,6 +1674,8 @@ This parameter can be a string or an integer.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1508,6 +1687,8 @@ This parameter can be a string or an integer.
 ##### name [#operation-api_v2_berry_firmness_retrieve+200+application-json+BerryFirmnessName+name]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1527,7 +1708,7 @@ _List berry flavors_
 
 Flavors determine whether a Pokémon will benefit or suffer from eating a berry based on their **nature**. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Flavor) for greater detail.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1537,7 +1718,7 @@ Flavors determine whether a Pokémon will benefit or suffer from eating a berry 
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1553,7 +1734,15 @@ Flavors determine whether a Pokémon will benefit or suffer from eating a berry 
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_berry_flavor_list+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_berry_flavor_list+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_flavor_list+security+SchemeBasicAuth+properties]
 
@@ -1577,6 +1766,8 @@ Flavors determine whether a Pokémon will benefit or suffer from eating a berry 
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1597,7 +1788,7 @@ Flavors determine whether a Pokémon will benefit or suffer from eating a berry 
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1611,7 +1802,7 @@ Flavors determine whether a Pokémon will benefit or suffer from eating a berry 
 
 Number of results to return per page.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1641,7 +1832,7 @@ Number of results to return per page.
 
 The initial index from which to return the results.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1672,7 +1863,7 @@ The initial index from which to return the results.
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1703,7 +1894,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_berry_flavor_list+responses]
+### Response [#operation-api_v2_berry_flavor_list+responses]
 
 </SectionTitle>
 
@@ -1715,7 +1906,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_berry_flavor_list+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1779,7 +1970,15 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </Property>
 
-<ExpandableSection title="BerryFlavorSummary" id="operation-api_v2_berry_flavor_list+200+application-json+BerryFlavorSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BerryFlavorSummary [#operation-api_v2_berry_flavor_list+200+application-json+BerryFlavorSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_flavor_list+200+application-json+BerryFlavorSummary+properties]
 
@@ -1803,6 +2002,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1819,7 +2020,7 @@ _Get berries by flavor_
 
 Flavors determine whether a Pokémon will benefit or suffer from eating a berry based on their **nature**. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Flavor) for greater detail.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1829,7 +2030,7 @@ Flavors determine whether a Pokémon will benefit or suffer from eating a berry 
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1845,7 +2046,15 @@ Flavors determine whether a Pokémon will benefit or suffer from eating a berry 
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_berry_flavor_retrieve+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_berry_flavor_retrieve+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_flavor_retrieve+security+SchemeBasicAuth+properties]
 
@@ -1869,6 +2078,8 @@ Flavors determine whether a Pokémon will benefit or suffer from eating a berry 
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1889,7 +2100,7 @@ Flavors determine whether a Pokémon will benefit or suffer from eating a berry 
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1903,7 +2114,7 @@ Flavors determine whether a Pokémon will benefit or suffer from eating a berry 
 
 This parameter can be a string or an integer.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1933,7 +2144,7 @@ This parameter can be a string or an integer.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_berry_flavor_retrieve+responses]
+### Response [#operation-api_v2_berry_flavor_retrieve+responses]
 
 </SectionTitle>
 
@@ -1945,7 +2156,7 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_berry_flavor_retrieve+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1961,7 +2172,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="berry" id="operation-api_v2_berry_flavor_retrieve+200+application-json+berry">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### berry [#operation-api_v2_berry_flavor_retrieve+200+application-json+berry]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_flavor_retrieve+200+application-json+berry+properties]
 
@@ -1993,6 +2212,8 @@ _Example:_
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -2005,7 +2226,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="ContestTypeSummary" id="operation-api_v2_berry_flavor_retrieve+200+application-json+ContestTypeSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ContestTypeSummary [#operation-api_v2_berry_flavor_retrieve+200+application-json+ContestTypeSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_flavor_retrieve+200+application-json+ContestTypeSummary+properties]
 
@@ -2026,6 +2255,8 @@ _Example:_
 ##### url [#operation-api_v2_berry_flavor_retrieve+200+application-json+ContestTypeSummary+url]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -2061,7 +2292,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="BerryFlavorName" id="operation-api_v2_berry_flavor_retrieve+200+application-json+BerryFlavorName">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BerryFlavorName [#operation-api_v2_berry_flavor_retrieve+200+application-json+BerryFlavorName]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_flavor_retrieve+200+application-json+BerryFlavorName+properties]
 
@@ -2073,7 +2312,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="LanguageSummary" id="operation-api_v2_berry_flavor_retrieve+200+application-json+BerryFlavorName+LanguageSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### LanguageSummary [#operation-api_v2_berry_flavor_retrieve+200+application-json+BerryFlavorName+LanguageSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_berry_flavor_retrieve+200+application-json+BerryFlavorName+LanguageSummary+properties]
 
@@ -2097,6 +2344,8 @@ _Example:_
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -2108,6 +2357,8 @@ _Example:_
 ##### name [#operation-api_v2_berry_flavor_retrieve+200+application-json+BerryFlavorName+name]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
