--- a/examples/nextra/petstore/src/app/api/tag/contests/page.mdx
+++ b/examples/nextra/petstore/src/app/api/tag/contests/page.mdx
@@ -2,6 +2,7 @@
 sidebarTitle: Contests
 ---
 
+import "@speakeasy-api/docs-md/nextra.css";
 import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSection, TabbedSection, SectionTab } from "@speakeasy-api/docs-md/nextra";
 
 
@@ -13,7 +14,7 @@ _List contest types_
 
 Contest types are categories judges used to weigh a Pok√©mon's condition in Pok√©mon contests. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Contest_condition) for greater detail.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -23,7 +24,7 @@ Contest types are categories judges used to weigh a Pok√©mon's condition in Pok√
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -39,7 +40,15 @@ Contest types are categories judges used to weigh a Pok√©mon's condition in Pok√
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_contest_type_list+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_contest_type_list+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_contest_type_list+security+SchemeBasicAuth+properties]
 
@@ -63,6 +72,8 @@ Contest types are categories judges used to weigh a Pok√©mon's condition in Pok√
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -83,7 +94,7 @@ Contest types are categories judges used to weigh a Pok√©mon's condition in Pok√
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -97,7 +108,7 @@ Contest types are categories judges used to weigh a Pok√©mon's condition in Pok√
 
 Number of results to return per page.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -127,7 +138,7 @@ Number of results to return per page.
 
 The initial index from which to return the results.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -158,7 +169,7 @@ The initial index from which to return the results.
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -189,7 +200,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_contest_type_list+responses]
+### Response [#operation-api_v2_contest_type_list+responses]
 
 </SectionTitle>
 
@@ -201,7 +212,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_contest_type_list+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -265,7 +276,15 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </Property>
 
-<ExpandableSection title="ContestTypeSummary" id="operation-api_v2_contest_type_list+200+application-json+ContestTypeSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ContestTypeSummary [#operation-api_v2_contest_type_list+200+application-json+ContestTypeSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_contest_type_list+200+application-json+ContestTypeSummary+properties]
 
@@ -289,6 +308,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -305,7 +326,7 @@ _Get contest type_
 
 Contest types are categories judges used to weigh a Pok√©mon's condition in Pok√©mon contests. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Contest_condition) for greater detail.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -315,7 +336,7 @@ Contest types are categories judges used to weigh a Pok√©mon's condition in Pok√
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -331,7 +352,15 @@ Contest types are categories judges used to weigh a Pok√©mon's condition in Pok√
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_contest_type_retrieve+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_contest_type_retrieve+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_contest_type_retrieve+security+SchemeBasicAuth+properties]
 
@@ -355,6 +384,8 @@ Contest types are categories judges used to weigh a Pok√©mon's condition in Pok√
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -375,7 +406,7 @@ Contest types are categories judges used to weigh a Pok√©mon's condition in Pok√
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -389,7 +420,7 @@ Contest types are categories judges used to weigh a Pok√©mon's condition in Pok√
 
 This parameter can be a string or an integer.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -419,7 +450,7 @@ This parameter can be a string or an integer.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_contest_type_retrieve+responses]
+### Response [#operation-api_v2_contest_type_retrieve+responses]
 
 </SectionTitle>
 
@@ -431,7 +462,7 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_contest_type_retrieve+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -447,7 +478,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="berry_flavor" id="operation-api_v2_contest_type_retrieve+200+application-json+berry_flavor">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### berry\_flavor [#operation-api_v2_contest_type_retrieve+200+application-json+berry_flavor]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_contest_type_retrieve+200+application-json+berry_flavor+properties]
 
@@ -468,6 +507,8 @@ This parameter can be a string or an integer.
 ##### url [#operation-api_v2_contest_type_retrieve+200+application-json+berry_flavor+url]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -503,7 +544,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="ContestTypeName" id="operation-api_v2_contest_type_retrieve+200+application-json+ContestTypeName">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ContestTypeName [#operation-api_v2_contest_type_retrieve+200+application-json+ContestTypeName]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_contest_type_retrieve+200+application-json+ContestTypeName+properties]
 
@@ -525,7 +574,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="LanguageSummary" id="operation-api_v2_contest_type_retrieve+200+application-json+ContestTypeName+LanguageSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### LanguageSummary [#operation-api_v2_contest_type_retrieve+200+application-json+ContestTypeName+LanguageSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_contest_type_retrieve+200+application-json+ContestTypeName+LanguageSummary+properties]
 
@@ -549,6 +606,8 @@ This parameter can be a string or an integer.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -560,6 +619,8 @@ This parameter can be a string or an integer.
 ##### name [#operation-api_v2_contest_type_retrieve+200+application-json+ContestTypeName+name]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -579,7 +640,7 @@ _List contest effects_
 
 Contest effects refer to the effects of moves when used in contests.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -589,7 +650,7 @@ Contest effects refer to the effects of moves when used in contests.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -605,7 +666,15 @@ Contest effects refer to the effects of moves when used in contests.
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_contest_effect_list+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_contest_effect_list+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_contest_effect_list+security+SchemeBasicAuth+properties]
 
@@ -629,6 +698,8 @@ Contest effects refer to the effects of moves when used in contests.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -649,7 +720,7 @@ Contest effects refer to the effects of moves when used in contests.
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -663,7 +734,7 @@ Contest effects refer to the effects of moves when used in contests.
 
 Number of results to return per page.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -693,7 +764,7 @@ Number of results to return per page.
 
 The initial index from which to return the results.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -724,7 +795,7 @@ The initial index from which to return the results.
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -755,7 +826,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_contest_effect_list+responses]
+### Response [#operation-api_v2_contest_effect_list+responses]
 
 </SectionTitle>
 
@@ -767,7 +838,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_contest_effect_list+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -831,7 +902,15 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </Property>
 
-<ExpandableSection title="ContestEffectSummary" id="operation-api_v2_contest_effect_list+200+application-json+ContestEffectSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ContestEffectSummary [#operation-api_v2_contest_effect_list+200+application-json+ContestEffectSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_contest_effect_list+200+application-json+ContestEffectSummary+properties]
 
@@ -842,6 +921,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 ##### url [#operation-api_v2_contest_effect_list+200+application-json+ContestEffectSummary+url]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -861,7 +942,7 @@ _Get contest effect_
 
 Contest effects refer to the effects of moves when used in contests.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -871,7 +952,7 @@ Contest effects refer to the effects of moves when used in contests.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -887,7 +968,15 @@ Contest effects refer to the effects of moves when used in contests.
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_contest_effect_retrieve+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_contest_effect_retrieve+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_contest_effect_retrieve+security+SchemeBasicAuth+properties]
 
@@ -911,6 +1000,8 @@ Contest effects refer to the effects of moves when used in contests.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -931,7 +1022,7 @@ Contest effects refer to the effects of moves when used in contests.
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -945,7 +1036,7 @@ Contest effects refer to the effects of moves when used in contests.
 
 This parameter can be a string or an integer.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -975,7 +1066,7 @@ This parameter can be a string or an integer.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_contest_effect_retrieve+responses]
+### Response [#operation-api_v2_contest_effect_retrieve+responses]
 
 </SectionTitle>
 
@@ -987,7 +1078,7 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_contest_effect_retrieve+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1013,7 +1104,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="ContestEffectEffectText" id="operation-api_v2_contest_effect_retrieve+200+application-json+ContestEffectEffectText">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ContestEffectEffectText [#operation-api_v2_contest_effect_retrieve+200+application-json+ContestEffectEffectText]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_contest_effect_retrieve+200+application-json+ContestEffectEffectText+properties]
 
@@ -1035,7 +1134,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="LanguageSummary" id="operation-api_v2_contest_effect_retrieve+200+application-json+ContestEffectEffectText+LanguageSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### LanguageSummary [#operation-api_v2_contest_effect_retrieve+200+application-json+ContestEffectEffectText+LanguageSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_contest_effect_retrieve+200+application-json+ContestEffectEffectText+LanguageSummary+properties]
 
@@ -1059,7 +1166,11 @@ This parameter can be a string or an integer.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1075,7 +1186,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="ContestEffectFlavorText" id="operation-api_v2_contest_effect_retrieve+200+application-json+ContestEffectFlavorText">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ContestEffectFlavorText [#operation-api_v2_contest_effect_retrieve+200+application-json+ContestEffectFlavorText]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_contest_effect_retrieve+200+application-json+ContestEffectFlavorText+properties]
 
@@ -1097,7 +1216,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="LanguageSummary" id="operation-api_v2_contest_effect_retrieve+200+application-json+ContestEffectFlavorText+LanguageSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### LanguageSummary [#operation-api_v2_contest_effect_retrieve+200+application-json+ContestEffectFlavorText+LanguageSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_contest_effect_retrieve+200+application-json+ContestEffectFlavorText+LanguageSummary+properties]
 
@@ -1121,7 +1248,11 @@ This parameter can be a string or an integer.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1161,7 +1292,7 @@ _List super contest effects_
 
 Super contest effects refer to the effects of moves when used in super contests.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1171,7 +1302,7 @@ Super contest effects refer to the effects of moves when used in super contests.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1187,7 +1318,15 @@ Super contest effects refer to the effects of moves when used in super contests.
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_super_contest_effect_list+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_super_contest_effect_list+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_super_contest_effect_list+security+SchemeBasicAuth+properties]
 
@@ -1211,6 +1350,8 @@ Super contest effects refer to the effects of moves when used in super contests.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1231,7 +1372,7 @@ Super contest effects refer to the effects of moves when used in super contests.
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1245,7 +1386,7 @@ Super contest effects refer to the effects of moves when used in super contests.
 
 Number of results to return per page.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1275,7 +1416,7 @@ Number of results to return per page.
 
 The initial index from which to return the results.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1306,7 +1447,7 @@ The initial index from which to return the results.
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1337,7 +1478,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_super_contest_effect_list+responses]
+### Response [#operation-api_v2_super_contest_effect_list+responses]
 
 </SectionTitle>
 
@@ -1349,7 +1490,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_super_contest_effect_list+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1413,7 +1554,15 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </Property>
 
-<ExpandableSection title="SuperContestEffectSummary" id="operation-api_v2_super_contest_effect_list+200+application-json+SuperContestEffectSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SuperContestEffectSummary [#operation-api_v2_super_contest_effect_list+200+application-json+SuperContestEffectSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_super_contest_effect_list+200+application-json+SuperContestEffectSummary+properties]
 
@@ -1424,6 +1573,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 ##### url [#operation-api_v2_super_contest_effect_list+200+application-json+SuperContestEffectSummary+url]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1443,7 +1594,7 @@ _Get super contest effect_
 
 Super contest effects refer to the effects of moves when used in super contests.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1453,7 +1604,7 @@ Super contest effects refer to the effects of moves when used in super contests.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1469,7 +1620,15 @@ Super contest effects refer to the effects of moves when used in super contests.
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_super_contest_effect_retrieve+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_super_contest_effect_retrieve+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_super_contest_effect_retrieve+security+SchemeBasicAuth+properties]
 
@@ -1493,6 +1652,8 @@ Super contest effects refer to the effects of moves when used in super contests.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1513,7 +1674,7 @@ Super contest effects refer to the effects of moves when used in super contests.
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1527,7 +1688,7 @@ Super contest effects refer to the effects of moves when used in super contests.
 
 This parameter can be a string or an integer.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1557,7 +1718,7 @@ This parameter can be a string or an integer.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_super_contest_effect_retrieve+responses]
+### Response [#operation-api_v2_super_contest_effect_retrieve+responses]
 
 </SectionTitle>
 
@@ -1569,7 +1730,7 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_super_contest_effect_retrieve+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1595,7 +1756,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="SuperContestEffectFlavorText" id="operation-api_v2_super_contest_effect_retrieve+200+application-json+SuperContestEffectFlavorText">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SuperContestEffectFlavorText [#operation-api_v2_super_contest_effect_retrieve+200+application-json+SuperContestEffectFlavorText]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_super_contest_effect_retrieve+200+application-json+SuperContestEffectFlavorText+properties]
 
@@ -1617,7 +1786,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="LanguageSummary" id="operation-api_v2_super_contest_effect_retrieve+200+application-json+SuperContestEffectFlavorText+LanguageSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### LanguageSummary [#operation-api_v2_super_contest_effect_retrieve+200+application-json+SuperContestEffectFlavorText+LanguageSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_super_contest_effect_retrieve+200+application-json+SuperContestEffectFlavorText+LanguageSummary+properties]
 
@@ -1641,7 +1818,11 @@ This parameter can be a string or an integer.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1667,7 +1848,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="MoveSummary" id="operation-api_v2_super_contest_effect_retrieve+200+application-json+MoveSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### MoveSummary [#operation-api_v2_super_contest_effect_retrieve+200+application-json+MoveSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_super_contest_effect_retrieve+200+application-json+MoveSummary+properties]
 
@@ -1688,6 +1877,8 @@ This parameter can be a string or an integer.
 ##### url [#operation-api_v2_super_contest_effect_retrieve+200+application-json+MoveSummary+url]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
