--- a/examples/nextra/petstore/src/app/api/tag/encounters/page.mdx
+++ b/examples/nextra/petstore/src/app/api/tag/encounters/page.mdx
@@ -2,6 +2,7 @@
 sidebarTitle: Encounters
 ---
 
+import "@speakeasy-api/docs-md/nextra.css";
 import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSection, TabbedSection, SectionTab } from "@speakeasy-api/docs-md/nextra";
 
 
@@ -13,7 +14,7 @@ _List encounter methods_
 
 Methods by which the player might can encounter Pokémon in the wild, e.g., walking in tall grass. Check out Bulbapedia for greater detail.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -23,7 +24,7 @@ Methods by which the player might can encounter Pokémon in the wild, e.g., walk
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -39,7 +40,15 @@ Methods by which the player might can encounter Pokémon in the wild, e.g., walk
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_encounter_method_list+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_encounter_method_list+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_encounter_method_list+security+SchemeBasicAuth+properties]
 
@@ -63,6 +72,8 @@ Methods by which the player might can encounter Pokémon in the wild, e.g., walk
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -83,7 +94,7 @@ Methods by which the player might can encounter Pokémon in the wild, e.g., walk
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -97,7 +108,7 @@ Methods by which the player might can encounter Pokémon in the wild, e.g., walk
 
 Number of results to return per page.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -127,7 +138,7 @@ Number of results to return per page.
 
 The initial index from which to return the results.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -158,7 +169,7 @@ The initial index from which to return the results.
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -189,7 +200,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_encounter_method_list+responses]
+### Response [#operation-api_v2_encounter_method_list+responses]
 
 </SectionTitle>
 
@@ -201,7 +212,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_encounter_method_list+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -265,7 +276,15 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </Property>
 
-<ExpandableSection title="EncounterMethodSummary" id="operation-api_v2_encounter_method_list+200+application-json+EncounterMethodSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### EncounterMethodSummary [#operation-api_v2_encounter_method_list+200+application-json+EncounterMethodSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_encounter_method_list+200+application-json+EncounterMethodSummary+properties]
 
@@ -289,6 +308,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -305,7 +326,7 @@ _Get encounter method_
 
 Methods by which the player might can encounter Pokémon in the wild, e.g., walking in tall grass. Check out Bulbapedia for greater detail.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -315,7 +336,7 @@ Methods by which the player might can encounter Pokémon in the wild, e.g., walk
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -331,7 +352,15 @@ Methods by which the player might can encounter Pokémon in the wild, e.g., walk
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_encounter_method_retrieve+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_encounter_method_retrieve+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_encounter_method_retrieve+security+SchemeBasicAuth+properties]
 
@@ -355,6 +384,8 @@ Methods by which the player might can encounter Pokémon in the wild, e.g., walk
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -375,7 +406,7 @@ Methods by which the player might can encounter Pokémon in the wild, e.g., walk
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -389,7 +420,7 @@ Methods by which the player might can encounter Pokémon in the wild, e.g., walk
 
 This parameter can be a string or an integer.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -419,7 +450,7 @@ This parameter can be a string or an integer.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_encounter_method_retrieve+responses]
+### Response [#operation-api_v2_encounter_method_retrieve+responses]
 
 </SectionTitle>
 
@@ -431,7 +462,7 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_encounter_method_retrieve+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -467,7 +498,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="EncounterMethodName" id="operation-api_v2_encounter_method_retrieve+200+application-json+EncounterMethodName">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### EncounterMethodName [#operation-api_v2_encounter_method_retrieve+200+application-json+EncounterMethodName]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_encounter_method_retrieve+200+application-json+EncounterMethodName+properties]
 
@@ -479,7 +518,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="LanguageSummary" id="operation-api_v2_encounter_method_retrieve+200+application-json+EncounterMethodName+LanguageSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### LanguageSummary [#operation-api_v2_encounter_method_retrieve+200+application-json+EncounterMethodName+LanguageSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_encounter_method_retrieve+200+application-json+EncounterMethodName+LanguageSummary+properties]
 
@@ -503,6 +550,8 @@ This parameter can be a string or an integer.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -514,6 +563,8 @@ This parameter can be a string or an integer.
 ##### name [#operation-api_v2_encounter_method_retrieve+200+application-json+EncounterMethodName+name]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -543,7 +594,7 @@ _List encounter conditions_
 
 Conditions which affect what pokemon might appear in the wild, e.g., day or night.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -553,7 +604,7 @@ Conditions which affect what pokemon might appear in the wild, e.g., day or nigh
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -569,7 +620,15 @@ Conditions which affect what pokemon might appear in the wild, e.g., day or nigh
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_encounter_condition_list+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_encounter_condition_list+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_encounter_condition_list+security+SchemeBasicAuth+properties]
 
@@ -593,6 +652,8 @@ Conditions which affect what pokemon might appear in the wild, e.g., day or nigh
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -613,7 +674,7 @@ Conditions which affect what pokemon might appear in the wild, e.g., day or nigh
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -627,7 +688,7 @@ Conditions which affect what pokemon might appear in the wild, e.g., day or nigh
 
 Number of results to return per page.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -657,7 +718,7 @@ Number of results to return per page.
 
 The initial index from which to return the results.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -688,7 +749,7 @@ The initial index from which to return the results.
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -719,7 +780,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_encounter_condition_list+responses]
+### Response [#operation-api_v2_encounter_condition_list+responses]
 
 </SectionTitle>
 
@@ -731,7 +792,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_encounter_condition_list+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -795,7 +856,15 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </Property>
 
-<ExpandableSection title="EncounterConditionSummary" id="operation-api_v2_encounter_condition_list+200+application-json+EncounterConditionSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### EncounterConditionSummary [#operation-api_v2_encounter_condition_list+200+application-json+EncounterConditionSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_encounter_condition_list+200+application-json+EncounterConditionSummary+properties]
 
@@ -819,6 +888,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -835,7 +906,7 @@ _Get encounter condition_
 
 Conditions which affect what pokemon might appear in the wild, e.g., day or night.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -845,7 +916,7 @@ Conditions which affect what pokemon might appear in the wild, e.g., day or nigh
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -861,7 +932,15 @@ Conditions which affect what pokemon might appear in the wild, e.g., day or nigh
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_encounter_condition_retrieve+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_encounter_condition_retrieve+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_encounter_condition_retrieve+security+SchemeBasicAuth+properties]
 
@@ -885,6 +964,8 @@ Conditions which affect what pokemon might appear in the wild, e.g., day or nigh
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -905,7 +986,7 @@ Conditions which affect what pokemon might appear in the wild, e.g., day or nigh
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -919,7 +1000,7 @@ Conditions which affect what pokemon might appear in the wild, e.g., day or nigh
 
 This parameter can be a string or an integer.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -949,7 +1030,7 @@ This parameter can be a string or an integer.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_encounter_condition_retrieve+responses]
+### Response [#operation-api_v2_encounter_condition_retrieve+responses]
 
 </SectionTitle>
 
@@ -961,7 +1042,7 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_encounter_condition_retrieve+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -997,7 +1078,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="EncounterConditionName" id="operation-api_v2_encounter_condition_retrieve+200+application-json+EncounterConditionName">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### EncounterConditionName [#operation-api_v2_encounter_condition_retrieve+200+application-json+EncounterConditionName]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_encounter_condition_retrieve+200+application-json+EncounterConditionName+properties]
 
@@ -1009,7 +1098,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="LanguageSummary" id="operation-api_v2_encounter_condition_retrieve+200+application-json+EncounterConditionName+LanguageSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### LanguageSummary [#operation-api_v2_encounter_condition_retrieve+200+application-json+EncounterConditionName+LanguageSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_encounter_condition_retrieve+200+application-json+EncounterConditionName+LanguageSummary+properties]
 
@@ -1033,6 +1130,8 @@ This parameter can be a string or an integer.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1044,6 +1143,8 @@ This parameter can be a string or an integer.
 ##### name [#operation-api_v2_encounter_condition_retrieve+200+application-json+EncounterConditionName+name]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1059,7 +1160,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="EncounterConditionValueSummary" id="operation-api_v2_encounter_condition_retrieve+200+application-json+EncounterConditionValueSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### EncounterConditionValueSummary [#operation-api_v2_encounter_condition_retrieve+200+application-json+EncounterConditionValueSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_encounter_condition_retrieve+200+application-json+EncounterConditionValueSummary+properties]
 
@@ -1083,6 +1192,8 @@ This parameter can be a string or an integer.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1099,7 +1210,7 @@ _List encounter condition values_
 
 Encounter condition values are the various states that an encounter condition can have, i.e., time of day can be either day or night.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1109,7 +1220,7 @@ Encounter condition values are the various states that an encounter condition ca
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1125,7 +1236,15 @@ Encounter condition values are the various states that an encounter condition ca
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_encounter_condition_value_list+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_encounter_condition_value_list+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_encounter_condition_value_list+security+SchemeBasicAuth+properties]
 
@@ -1149,6 +1268,8 @@ Encounter condition values are the various states that an encounter condition ca
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1169,7 +1290,7 @@ Encounter condition values are the various states that an encounter condition ca
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1183,7 +1304,7 @@ Encounter condition values are the various states that an encounter condition ca
 
 Number of results to return per page.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1213,7 +1334,7 @@ Number of results to return per page.
 
 The initial index from which to return the results.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1244,7 +1365,7 @@ The initial index from which to return the results.
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1275,7 +1396,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_encounter_condition_value_list+responses]
+### Response [#operation-api_v2_encounter_condition_value_list+responses]
 
 </SectionTitle>
 
@@ -1287,7 +1408,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_encounter_condition_value_list+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1351,7 +1472,15 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </Property>
 
-<ExpandableSection title="EncounterConditionValueSummary" id="operation-api_v2_encounter_condition_value_list+200+application-json+EncounterConditionValueSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### EncounterConditionValueSummary [#operation-api_v2_encounter_condition_value_list+200+application-json+EncounterConditionValueSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_encounter_condition_value_list+200+application-json+EncounterConditionValueSummary+properties]
 
@@ -1375,6 +1504,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1391,7 +1522,7 @@ _Get encounter condition value_
 
 Encounter condition values are the various states that an encounter condition can have, i.e., time of day can be either day or night.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1401,7 +1532,7 @@ Encounter condition values are the various states that an encounter condition ca
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1417,7 +1548,15 @@ Encounter condition values are the various states that an encounter condition ca
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_encounter_condition_value_retrieve+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_encounter_condition_value_retrieve+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_encounter_condition_value_retrieve+security+SchemeBasicAuth+properties]
 
@@ -1441,6 +1580,8 @@ Encounter condition values are the various states that an encounter condition ca
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1461,7 +1602,7 @@ Encounter condition values are the various states that an encounter condition ca
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1475,7 +1616,7 @@ Encounter condition values are the various states that an encounter condition ca
 
 This parameter can be a string or an integer.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1505,7 +1646,7 @@ This parameter can be a string or an integer.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_encounter_condition_value_retrieve+responses]
+### Response [#operation-api_v2_encounter_condition_value_retrieve+responses]
 
 </SectionTitle>
 
@@ -1517,7 +1658,7 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_encounter_condition_value_retrieve+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1533,7 +1674,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="EncounterConditionSummary" id="operation-api_v2_encounter_condition_value_retrieve+200+application-json+EncounterConditionSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### EncounterConditionSummary [#operation-api_v2_encounter_condition_value_retrieve+200+application-json+EncounterConditionSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_encounter_condition_value_retrieve+200+application-json+EncounterConditionSummary+properties]
 
@@ -1554,6 +1703,8 @@ This parameter can be a string or an integer.
 ##### url [#operation-api_v2_encounter_condition_value_retrieve+200+application-json+EncounterConditionSummary+url]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1589,7 +1740,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="EncounterConditionValueName" id="operation-api_v2_encounter_condition_value_retrieve+200+application-json+EncounterConditionValueName">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### EncounterConditionValueName [#operation-api_v2_encounter_condition_value_retrieve+200+application-json+EncounterConditionValueName]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_encounter_condition_value_retrieve+200+application-json+EncounterConditionValueName+properties]
 
@@ -1601,7 +1760,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="LanguageSummary" id="operation-api_v2_encounter_condition_value_retrieve+200+application-json+EncounterConditionValueName+LanguageSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### LanguageSummary [#operation-api_v2_encounter_condition_value_retrieve+200+application-json+EncounterConditionValueName+LanguageSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_encounter_condition_value_retrieve+200+application-json+EncounterConditionValueName+LanguageSummary+properties]
 
@@ -1625,6 +1792,8 @@ This parameter can be a string or an integer.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1636,6 +1805,8 @@ This parameter can be a string or an integer.
 ##### name [#operation-api_v2_encounter_condition_value_retrieve+200+application-json+EncounterConditionValueName+name]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1655,7 +1826,7 @@ _Get pokemon encounter_
 
 Handles Pokemon Encounters as a sub-resource.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1665,7 +1836,7 @@ Handles Pokemon Encounters as a sub-resource.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1681,7 +1852,15 @@ Handles Pokemon Encounters as a sub-resource.
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_pokemon_encounters_retrieve+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_pokemon_encounters_retrieve+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_pokemon_encounters_retrieve+security+SchemeBasicAuth+properties]
 
@@ -1705,6 +1884,8 @@ Handles Pokemon Encounters as a sub-resource.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1725,7 +1906,7 @@ Handles Pokemon Encounters as a sub-resource.
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1737,7 +1918,7 @@ Handles Pokemon Encounters as a sub-resource.
 
 ##### pokemon\_id <Pill variant="warning">required</Pill> [#operation-api_v2_pokemon_encounters_retrieve+parameters+pokemon_id]
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1765,7 +1946,7 @@ Handles Pokemon Encounters as a sub-resource.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_pokemon_encounters_retrieve+responses]
+### Response [#operation-api_v2_pokemon_encounters_retrieve+responses]
 
 </SectionTitle>
 
@@ -1777,7 +1958,7 @@ Handles Pokemon Encounters as a sub-resource.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_pokemon_encounters_retrieve+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
