--- a/examples/nextra/petstore/src/app/api/tag/machines/page.mdx
+++ b/examples/nextra/petstore/src/app/api/tag/machines/page.mdx
@@ -2,6 +2,7 @@
 sidebarTitle: Machines
 ---
 
+import "@speakeasy-api/docs-md/nextra.css";
 import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSection, TabbedSection, SectionTab } from "@speakeasy-api/docs-md/nextra";
 
 
@@ -13,7 +14,7 @@ _List machines_
 
 Machines are the representation of items that teach moves to Pokémon. They vary from version to version, so it is not certain that one specific TM or HM corresponds to a single Machine.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -23,7 +24,7 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -39,7 +40,15 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_machine_list+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_machine_list+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_machine_list+security+SchemeBasicAuth+properties]
 
@@ -63,6 +72,8 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -83,7 +94,7 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -97,7 +108,7 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 Number of results to return per page.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -127,7 +138,7 @@ Number of results to return per page.
 
 The initial index from which to return the results.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -158,7 +169,7 @@ The initial index from which to return the results.
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -189,7 +200,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_machine_list+responses]
+### Response [#operation-api_v2_machine_list+responses]
 
 </SectionTitle>
 
@@ -201,7 +212,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_machine_list+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -265,7 +276,15 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </Property>
 
-<ExpandableSection title="MachineSummary" id="operation-api_v2_machine_list+200+application-json+MachineSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### MachineSummary [#operation-api_v2_machine_list+200+application-json+MachineSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_machine_list+200+application-json+MachineSummary+properties]
 
@@ -276,6 +295,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 ##### url [#operation-api_v2_machine_list+200+application-json+MachineSummary+url]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -295,7 +316,7 @@ _Get machine_
 
 Machines are the representation of items that teach moves to Pokémon. They vary from version to version, so it is not certain that one specific TM or HM corresponds to a single Machine.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -305,7 +326,7 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -321,7 +342,15 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_machine_retrieve+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_machine_retrieve+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_machine_retrieve+security+SchemeBasicAuth+properties]
 
@@ -345,6 +374,8 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -365,7 +396,7 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -379,7 +410,7 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 This parameter can be a string or an integer.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -409,7 +440,7 @@ This parameter can be a string or an integer.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_machine_retrieve+responses]
+### Response [#operation-api_v2_machine_retrieve+responses]
 
 </SectionTitle>
 
@@ -421,7 +452,7 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_machine_retrieve+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -447,7 +478,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="ItemSummary" id="operation-api_v2_machine_retrieve+200+application-json+ItemSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ItemSummary [#operation-api_v2_machine_retrieve+200+application-json+ItemSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_machine_retrieve+200+application-json+ItemSummary+properties]
 
@@ -471,6 +510,8 @@ This parameter can be a string or an integer.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -483,7 +524,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="MoveSummary" id="operation-api_v2_machine_retrieve+200+application-json+MoveSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### MoveSummary [#operation-api_v2_machine_retrieve+200+application-json+MoveSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_machine_retrieve+200+application-json+MoveSummary+properties]
 
@@ -507,6 +556,8 @@ This parameter can be a string or an integer.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -519,7 +570,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="VersionGroupSummary" id="operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### VersionGroupSummary [#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary+properties]
 
@@ -540,6 +599,8 @@ This parameter can be a string or an integer.
 ##### url [#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary+url]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
