--- a/examples/nextra/petstore/src/app/api/tag/utility/page.mdx
+++ b/examples/nextra/petstore/src/app/api/tag/utility/page.mdx
@@ -2,6 +2,7 @@
 sidebarTitle: Utility
 ---
 
+import "@speakeasy-api/docs-md/nextra.css";
 import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSection, TabbedSection, SectionTab } from "@speakeasy-api/docs-md/nextra";
 
 
@@ -13,7 +14,7 @@ _List languages_
 
 Languages for translations of API resource information.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -23,7 +24,7 @@ Languages for translations of API resource information.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -39,7 +40,15 @@ Languages for translations of API resource information.
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_language_list+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_language_list+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_language_list+security+SchemeBasicAuth+properties]
 
@@ -63,6 +72,8 @@ Languages for translations of API resource information.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -83,7 +94,7 @@ Languages for translations of API resource information.
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -97,7 +108,7 @@ Languages for translations of API resource information.
 
 Number of results to return per page.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -127,7 +138,7 @@ Number of results to return per page.
 
 The initial index from which to return the results.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -158,7 +169,7 @@ The initial index from which to return the results.
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -189,7 +200,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_language_list+responses]
+### Response [#operation-api_v2_language_list+responses]
 
 </SectionTitle>
 
@@ -201,7 +212,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_language_list+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -265,7 +276,15 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </Property>
 
-<ExpandableSection title="LanguageSummary" id="operation-api_v2_language_list+200+application-json+LanguageSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### LanguageSummary [#operation-api_v2_language_list+200+application-json+LanguageSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_language_list+200+application-json+LanguageSummary+properties]
 
@@ -289,6 +308,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -305,7 +326,7 @@ _Get language_
 
 Languages for translations of API resource information.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -315,7 +336,7 @@ Languages for translations of API resource information.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -331,7 +352,15 @@ Languages for translations of API resource information.
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_language_retrieve+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_language_retrieve+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_language_retrieve+security+SchemeBasicAuth+properties]
 
@@ -355,6 +384,8 @@ Languages for translations of API resource information.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -375,7 +406,7 @@ Languages for translations of API resource information.
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -389,7 +420,7 @@ Languages for translations of API resource information.
 
 This parameter can be a string or an integer.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -419,7 +450,7 @@ This parameter can be a string or an integer.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_language_retrieve+responses]
+### Response [#operation-api_v2_language_retrieve+responses]
 
 </SectionTitle>
 
@@ -431,7 +462,7 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_language_retrieve+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -487,7 +518,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="LanguageName" id="operation-api_v2_language_retrieve+200+application-json+LanguageName">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### LanguageName [#operation-api_v2_language_retrieve+200+application-json+LanguageName]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_language_retrieve+200+application-json+LanguageName+properties]
 
@@ -499,7 +538,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="LanguageSummary" id="operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### LanguageSummary [#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary+properties]
 
@@ -523,6 +570,8 @@ This parameter can be a string or an integer.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -534,6 +583,8 @@ This parameter can be a string or an integer.
 ##### name [#operation-api_v2_language_retrieve+200+application-json+LanguageName+name]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
