--- a/examples/docusaurus/mistral/docs/api/tag/agents.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/agents.mdx
@@ -13,7 +13,7 @@ import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSectio
 
 Agents Completion
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -23,7 +23,7 @@ Agents Completion
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -75,7 +75,15 @@ frequency_penalty penalizes the repetition of words based on their frequency in 
 
 The prompt(s) to generate completions for, encoded as a list of dict with role and content.
 
-<ExpandableSection title="SystemMessage" id="operation-agents_completion_v1_agents_completions_post+request+SystemMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SystemMessage \{#operation-agents_completion_v1_agents_completions_post+request+SystemMessage\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+SystemMessage+properties\}
 
@@ -87,7 +95,15 @@ The prompt(s) to generate completions for, encoded as a list of dict with role a
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-agents_completion_v1_agents_completions_post+request+SystemMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk \{#operation-agents_completion_v1_agents_completions_post+request+SystemMessage+TextChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+SystemMessage+TextChunk+properties\}
 
@@ -113,6 +129,8 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -129,9 +147,19 @@ _Default Value:_ `"system"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="UserMessage" id="operation-agents_completion_v1_agents_completions_post+request+UserMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### UserMessage \{#operation-agents_completion_v1_agents_completions_post+request+UserMessage\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+UserMessage+properties\}
 
@@ -143,7 +171,15 @@ _Default Value:_ `"system"`
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-agents_completion_v1_agents_completions_post+request+UserMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk \{#operation-agents_completion_v1_agents_completions_post+request+UserMessage+TextChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+UserMessage+TextChunk+properties\}
 
@@ -169,9 +205,19 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-agents_completion_v1_agents_completions_post+request+UserMessage+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk \{#operation-agents_completion_v1_agents_completions_post+request+UserMessage+ImageURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -185,7 +231,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-agents_completion_v1_agents_completions_post+request+UserMessage+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL \{#operation-agents_completion_v1_agents_completions_post+request+UserMessage+ImageURLChunk+ImageURL\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+UserMessage+ImageURLChunk+ImageURL+properties\}
 
@@ -209,6 +263,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -225,9 +281,19 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="DocumentURLChunk" id="operation-agents_completion_v1_agents_completions_post+request+UserMessage+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk \{#operation-agents_completion_v1_agents_completions_post+request+UserMessage+DocumentURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+UserMessage+DocumentURLChunk+properties\}
 
@@ -263,9 +329,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ReferenceChunk" id="operation-agents_completion_v1_agents_completions_post+request+UserMessage+ReferenceChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ReferenceChunk \{#operation-agents_completion_v1_agents_completions_post+request+UserMessage+ReferenceChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+UserMessage+ReferenceChunk+properties\}
 
@@ -291,6 +367,8 @@ _Default Value:_ `"reference"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -307,9 +385,19 @@ _Default Value:_ `"user"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="AssistantMessage" id="operation-agents_completion_v1_agents_completions_post+request+AssistantMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### AssistantMessage \{#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+properties\}
 
@@ -321,7 +409,15 @@ _Default Value:_ `"user"`
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk \{#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+TextChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+TextChunk+properties\}
 
@@ -347,9 +443,19 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk \{#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ImageURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -363,7 +469,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL \{#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ImageURLChunk+ImageURL\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ImageURLChunk+ImageURL+properties\}
 
@@ -387,6 +501,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -403,9 +519,19 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="DocumentURLChunk" id="operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk \{#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+DocumentURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+DocumentURLChunk+properties\}
 
@@ -441,9 +567,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ReferenceChunk" id="operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ReferenceChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ReferenceChunk \{#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ReferenceChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ReferenceChunk+properties\}
 
@@ -466,6 +602,8 @@ _Default Value:_ `"document_url"`
 </Property>
 
 _Default Value:_ `"reference"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -507,7 +645,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="ToolCall" id="operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ToolCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ToolCall \{#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ToolCall\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ToolCall+properties\}
 
@@ -519,7 +665,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="FunctionCall" id="operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ToolCall+FunctionCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### FunctionCall \{#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ToolCall+FunctionCall\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ToolCall+FunctionCall+properties\}
 
@@ -540,6 +694,8 @@ _Default Value:_ `"assistant"`
 ##### name \{#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ToolCall+FunctionCall+name\}
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -581,13 +737,25 @@ _Default Value:_ `0`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
+
+</SectionContent>
 
 </SectionContent>
 
 </ExpandableSection>
 
-<ExpandableSection title="ToolMessage" id="operation-agents_completion_v1_agents_completions_post+request+ToolMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ToolMessage \{#operation-agents_completion_v1_agents_completions_post+request+ToolMessage\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+properties\}
 
@@ -599,7 +767,15 @@ _Default Value:_ `0`
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-agents_completion_v1_agents_completions_post+request+ToolMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk \{#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+TextChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+TextChunk+properties\}
 
@@ -625,9 +801,19 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-agents_completion_v1_agents_completions_post+request+ToolMessage+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk \{#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+ImageURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -641,7 +827,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-agents_completion_v1_agents_completions_post+request+ToolMessage+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL \{#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+ImageURLChunk+ImageURL\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+ImageURLChunk+ImageURL+properties\}
 
@@ -665,6 +859,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -681,9 +877,19 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="DocumentURLChunk" id="operation-agents_completion_v1_agents_completions_post+request+ToolMessage+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk \{#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+DocumentURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+DocumentURLChunk+properties\}
 
@@ -719,9 +925,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ReferenceChunk" id="operation-agents_completion_v1_agents_completions_post+request+ToolMessage+ReferenceChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ReferenceChunk \{#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+ReferenceChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+ReferenceChunk+properties\}
 
@@ -744,6 +960,8 @@ _Default Value:_ `"document_url"`
 </Property>
 
 _Default Value:_ `"reference"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -783,6 +1001,8 @@ _Default Value:_ `"tool"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -815,7 +1035,15 @@ _Default Value:_ `"tool"`
 
 </Property>
 
-<ExpandableSection title="Prediction" id="operation-agents_completion_v1_agents_completions_post+request+Prediction">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### Prediction \{#operation-agents_completion_v1_agents_completions_post+request+Prediction\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+Prediction+properties\}
 
@@ -840,6 +1068,8 @@ _Default Value:_ `""`
 </Property>
 
 _Default Value:_ `"content"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -887,7 +1117,15 @@ presence_penalty determines how much the model penalizes the repetition of words
 
 </Property>
 
-<ExpandableSection title="ResponseFormat" id="operation-agents_completion_v1_agents_completions_post+request+ResponseFormat">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ResponseFormat \{#operation-agents_completion_v1_agents_completions_post+request+ResponseFormat\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+ResponseFormat+properties\}
 
@@ -899,7 +1137,15 @@ presence_penalty determines how much the model penalizes the repetition of words
 
 </Property>
 
-<ExpandableSection title="JsonSchema" id="operation-agents_completion_v1_agents_completions_post+request+ResponseFormat+JsonSchema">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### JsonSchema \{#operation-agents_completion_v1_agents_completions_post+request+ResponseFormat+JsonSchema\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+ResponseFormat+JsonSchema+properties\}
 
@@ -943,6 +1189,8 @@ presence_penalty determines how much the model penalizes the repetition of words
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -956,6 +1204,8 @@ presence_penalty determines how much the model penalizes the repetition of words
 </Property>
 
 An object specifying the format that the model must output. Setting to `\{ "type": "json_object" \}` enables JSON mode, which guarantees the message the model generates is in JSON. When using JSON mode you MUST also instruct the model to produce JSON yourself with a system or a user message.
+
+</SectionContent>
 
 </SectionContent>
 
@@ -997,7 +1247,15 @@ _Default Value:_ `false`
 
 </Property>
 
-<ExpandableSection title="ToolChoice" id="operation-agents_completion_v1_agents_completions_post+request+ToolChoice">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ToolChoice \{#operation-agents_completion_v1_agents_completions_post+request+ToolChoice\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 ToolChoice is either a ToolChoiceEnum or a ToolChoice
 
@@ -1013,7 +1271,15 @@ ToolChoice is either a ToolChoiceEnum or a ToolChoice
 
 this restriction of `Function` is used to select a specific function to call
 
-<ExpandableSection title="FunctionName" id="operation-agents_completion_v1_agents_completions_post+request+ToolChoice+FunctionName">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### FunctionName \{#operation-agents_completion_v1_agents_completions_post+request+ToolChoice+FunctionName\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 this restriction of `Function` is used to select a specific function to call
 
@@ -1026,6 +1292,8 @@ this restriction of `Function` is used to select a specific function to call
 ##### name \{#operation-agents_completion_v1_agents_completions_post+request+ToolChoice+FunctionName+name\}
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1043,6 +1311,8 @@ this restriction of `Function` is used to select a specific function to call
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1055,7 +1325,15 @@ this restriction of `Function` is used to select a specific function to call
 
 </Property>
 
-<ExpandableSection title="Tool" id="operation-agents_completion_v1_agents_completions_post+request+Tool">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### Tool \{#operation-agents_completion_v1_agents_completions_post+request+Tool\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+Tool+properties\}
 
@@ -1067,7 +1345,15 @@ this restriction of `Function` is used to select a specific function to call
 
 </Property>
 
-<ExpandableSection title="Function" id="operation-agents_completion_v1_agents_completions_post+request+Tool+Function">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### Function \{#operation-agents_completion_v1_agents_completions_post+request+Tool+Function\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+request+Tool+Function+properties\}
 
@@ -1111,6 +1397,8 @@ this restriction of `Function` is used to select a specific function to call
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1122,6 +1410,8 @@ this restriction of `Function` is used to select a specific function to call
 ##### type \{#operation-agents_completion_v1_agents_completions_post+request+Tool+type\}
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1139,7 +1429,7 @@ this restriction of `Function` is used to select a specific function to call
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-agents_completion_v1_agents_completions_post+responses\}
+### Response \{#operation-agents_completion_v1_agents_completions_post+responses\}
 
 </SectionTitle>
 
@@ -1153,7 +1443,7 @@ this restriction of `Function` is used to select a specific function to call
 
 Successful Response
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1169,7 +1459,15 @@ Successful Response
 
 </Property>
 
-<ExpandableSection title="ChatCompletionChoice" id="operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ChatCompletionChoice \{#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+properties\}
 
@@ -1213,7 +1511,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="AssistantMessage" id="operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### AssistantMessage \{#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+properties\}
 
@@ -1225,7 +1531,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk \{#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+TextChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+TextChunk+properties\}
 
@@ -1251,9 +1565,19 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk \{#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -1267,7 +1591,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL \{#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk+ImageURL\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk+ImageURL+properties\}
 
@@ -1291,6 +1623,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1307,9 +1641,19 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="DocumentURLChunk" id="operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk \{#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+DocumentURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+DocumentURLChunk+properties\}
 
@@ -1345,9 +1689,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ReferenceChunk" id="operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ReferenceChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ReferenceChunk \{#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ReferenceChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ReferenceChunk+properties\}
 
@@ -1370,6 +1724,8 @@ _Default Value:_ `"document_url"`
 </Property>
 
 _Default Value:_ `"reference"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1411,7 +1767,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="ToolCall" id="operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ToolCall \{#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+properties\}
 
@@ -1423,7 +1787,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="FunctionCall" id="operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### FunctionCall \{#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall+properties\}
 
@@ -1444,6 +1816,8 @@ _Default Value:_ `"assistant"`
 ##### name \{#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall+name\}
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1485,11 +1859,17 @@ _Default Value:_ `0`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1569,7 +1949,15 @@ chat.completion
 
 </Property>
 
-<ExpandableSection title="UsageInfo" id="operation-agents_completion_v1_agents_completions_post+200+application-json+UsageInfo">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### UsageInfo \{#operation-agents_completion_v1_agents_completions_post+200+application-json+UsageInfo\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-agents_completion_v1_agents_completions_post+200+application-json+UsageInfo+properties\}
 
@@ -1620,98 +2008,6 @@ _Example:_
 ```
 
 </SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-<SectionTab slot="tab" id="operation-agents_completion_v1_agents_completions_post+422+application-json">
-
-422
-
-</SectionTab>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-agents_completion_v1_agents_completions_post+422+application-json">
-
-Validation Error
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-agents_completion_v1_agents_completions_post+422+application-json+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-agents_completion_v1_agents_completions_post+422+application-json+Security\">Security</a>","children":[],"breakoutSubTypes":[{"label":"Security","schema":{"type":"object","description":null,"examples":[],"properties":{"ApiKey":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["ApiKey"],"name":"Security","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### HttpMeta \{#operation-agents_completion_v1_agents_completions_post+422+application-json+HttpMeta\}
-
-</Property>
-
-<ExpandableSection title="Security" id="operation-agents_completion_v1_agents_completions_post+422+application-json+Security">
-
-#### Properties \{#operation-agents_completion_v1_agents_completions_post+422+application-json+Security+properties\}
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-agents_completion_v1_agents_completions_post+422+application-json+Security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-agents_completion_v1_agents_completions_post+422+application-json+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-agents_completion_v1_agents_completions_post+422+application-json+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### detail \{#operation-agents_completion_v1_agents_completions_post+422+application-json+detail\}
-
-</Property>
-
-<ExpandableSection title="ValidationError" id="operation-agents_completion_v1_agents_completions_post+422+application-json+ValidationError">
-
-#### Properties \{#operation-agents_completion_v1_agents_completions_post+422+application-json+ValidationError+properties\}
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### loc \{#operation-agents_completion_v1_agents_completions_post+422+application-json+ValidationError+loc\}
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### msg \{#operation-agents_completion_v1_agents_completions_post+422+application-json+ValidationError+msg\}
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### type \{#operation-agents_completion_v1_agents_completions_post+422+application-json+ValidationError+type\}
-
-</Property>
 
 </SectionContent>
 
