--- a/examples/docusaurus/mistral/docs/api/tag/batch/jobs.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/batch/jobs.mdx
@@ -33,7 +33,7 @@ Get a list of batch jobs for your organization and user.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -49,7 +49,15 @@ OK
 
 </Property>
 
-<ExpandableSection title="BatchJobOut" id="operation-jobs_api_routes_batch_get_batch_jobs+200+application-json+BatchJobOut">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BatchJobOut \{#operation-jobs_api_routes_batch_get_batch_jobs+200+application-json+BatchJobOut\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-jobs_api_routes_batch_get_batch_jobs+200+application-json+BatchJobOut+properties\}
 
@@ -111,7 +119,15 @@ OK
 
 </Property>
 
-<ExpandableSection title="BatchError" id="operation-jobs_api_routes_batch_get_batch_jobs+200+application-json+BatchJobOut+BatchError">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BatchError \{#operation-jobs_api_routes_batch_get_batch_jobs+200+application-json+BatchJobOut+BatchError\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-jobs_api_routes_batch_get_batch_jobs+200+application-json+BatchJobOut+BatchError+properties\}
 
@@ -134,6 +150,8 @@ _Default Value:_ `1`
 ##### message \{#operation-jobs_api_routes_batch_get_batch_jobs+200+application-json+BatchJobOut+BatchError+message\}
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -253,6 +271,8 @@ _Default Value:_ `"batch"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -291,7 +311,7 @@ _Create Batch Job_
 
 Create a new batch job, it will be queued for processing.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -301,7 +321,7 @@ Create a new batch job, it will be queued for processing.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -385,7 +405,7 @@ _Default Value:_ `24`
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -451,7 +471,15 @@ OK
 
 </Property>
 
-<ExpandableSection title="BatchError" id="operation-jobs_api_routes_batch_create_batch_job+200+application-json+BatchError">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BatchError \{#operation-jobs_api_routes_batch_create_batch_job+200+application-json+BatchError\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-jobs_api_routes_batch_create_batch_job+200+application-json+BatchError+properties\}
 
@@ -474,6 +502,8 @@ _Default Value:_ `1`
 ##### message \{#operation-jobs_api_routes_batch_create_batch_job+200+application-json+BatchError+message\}
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -605,7 +635,7 @@ _Get Batch Job_
 
 Get a batch job details by its UUID.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -617,7 +647,7 @@ Get a batch job details by its UUID.
 
 ##### job\_id <Pill variant="warning">required</Pill> \{#operation-jobs_api_routes_batch_get_batch_job+parameters+job_id\}
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -659,7 +689,7 @@ Get a batch job details by its UUID.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -725,7 +755,15 @@ OK
 
 </Property>
 
-<ExpandableSection title="BatchError" id="operation-jobs_api_routes_batch_get_batch_job+200+application-json+BatchError">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BatchError \{#operation-jobs_api_routes_batch_get_batch_job+200+application-json+BatchError\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-jobs_api_routes_batch_get_batch_job+200+application-json+BatchError+properties\}
 
@@ -748,6 +786,8 @@ _Default Value:_ `1`
 ##### message \{#operation-jobs_api_routes_batch_get_batch_job+200+application-json+BatchError+message\}
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -879,7 +919,7 @@ _Cancel Batch Job_
 
 Request the cancellation of a batch job.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -891,7 +931,7 @@ Request the cancellation of a batch job.
 
 ##### job\_id <Pill variant="warning">required</Pill> \{#operation-jobs_api_routes_batch_cancel_batch_job+parameters+job_id\}
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -933,7 +973,7 @@ Request the cancellation of a batch job.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -999,7 +1039,15 @@ OK
 
 </Property>
 
-<ExpandableSection title="BatchError" id="operation-jobs_api_routes_batch_cancel_batch_job+200+application-json+BatchError">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BatchError \{#operation-jobs_api_routes_batch_cancel_batch_job+200+application-json+BatchError\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-jobs_api_routes_batch_cancel_batch_job+200+application-json+BatchError+properties\}
 
@@ -1022,6 +1070,8 @@ _Default Value:_ `1`
 ##### message \{#operation-jobs_api_routes_batch_cancel_batch_job+200+application-json+BatchError+message\}
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
