--- a/examples/docusaurus/mistral/docs/api/tag/chat.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/chat.mdx
@@ -13,7 +13,7 @@ import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSectio
 
 Chat Completion
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -23,7 +23,7 @@ Chat Completion
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -63,7 +63,15 @@ frequency_penalty penalizes the repetition of words based on their frequency in 
 
 The prompt(s) to generate completions for, encoded as a list of dict with role and content.
 
-<ExpandableSection title="SystemMessage" id="operation-chat_completion_v1_chat_completions_post+request+SystemMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SystemMessage \{#operation-chat_completion_v1_chat_completions_post+request+SystemMessage\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+SystemMessage+properties\}
 
@@ -75,7 +83,15 @@ The prompt(s) to generate completions for, encoded as a list of dict with role a
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-chat_completion_v1_chat_completions_post+request+SystemMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk \{#operation-chat_completion_v1_chat_completions_post+request+SystemMessage+TextChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+SystemMessage+TextChunk+properties\}
 
@@ -101,6 +117,8 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -117,9 +135,19 @@ _Default Value:_ `"system"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="UserMessage" id="operation-chat_completion_v1_chat_completions_post+request+UserMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### UserMessage \{#operation-chat_completion_v1_chat_completions_post+request+UserMessage\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+UserMessage+properties\}
 
@@ -131,7 +159,15 @@ _Default Value:_ `"system"`
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-chat_completion_v1_chat_completions_post+request+UserMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk \{#operation-chat_completion_v1_chat_completions_post+request+UserMessage+TextChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+UserMessage+TextChunk+properties\}
 
@@ -157,9 +193,19 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-chat_completion_v1_chat_completions_post+request+UserMessage+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk \{#operation-chat_completion_v1_chat_completions_post+request+UserMessage+ImageURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -173,7 +219,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-chat_completion_v1_chat_completions_post+request+UserMessage+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL \{#operation-chat_completion_v1_chat_completions_post+request+UserMessage+ImageURLChunk+ImageURL\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+UserMessage+ImageURLChunk+ImageURL+properties\}
 
@@ -197,6 +251,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -213,9 +269,19 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="DocumentURLChunk" id="operation-chat_completion_v1_chat_completions_post+request+UserMessage+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk \{#operation-chat_completion_v1_chat_completions_post+request+UserMessage+DocumentURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+UserMessage+DocumentURLChunk+properties\}
 
@@ -251,9 +317,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ReferenceChunk" id="operation-chat_completion_v1_chat_completions_post+request+UserMessage+ReferenceChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ReferenceChunk \{#operation-chat_completion_v1_chat_completions_post+request+UserMessage+ReferenceChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+UserMessage+ReferenceChunk+properties\}
 
@@ -279,6 +355,8 @@ _Default Value:_ `"reference"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -295,9 +373,19 @@ _Default Value:_ `"user"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="AssistantMessage" id="operation-chat_completion_v1_chat_completions_post+request+AssistantMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### AssistantMessage \{#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+properties\}
 
@@ -309,7 +397,15 @@ _Default Value:_ `"user"`
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk \{#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+TextChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+TextChunk+properties\}
 
@@ -335,9 +431,19 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk \{#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ImageURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -351,7 +457,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL \{#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ImageURLChunk+ImageURL\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ImageURLChunk+ImageURL+properties\}
 
@@ -375,6 +489,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -391,9 +507,19 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="DocumentURLChunk" id="operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk \{#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+DocumentURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+DocumentURLChunk+properties\}
 
@@ -429,9 +555,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ReferenceChunk" id="operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ReferenceChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ReferenceChunk \{#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ReferenceChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ReferenceChunk+properties\}
 
@@ -454,6 +590,8 @@ _Default Value:_ `"document_url"`
 </Property>
 
 _Default Value:_ `"reference"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -495,7 +633,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="ToolCall" id="operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ToolCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ToolCall \{#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ToolCall\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ToolCall+properties\}
 
@@ -507,7 +653,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="FunctionCall" id="operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ToolCall+FunctionCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### FunctionCall \{#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ToolCall+FunctionCall\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ToolCall+FunctionCall+properties\}
 
@@ -528,6 +682,8 @@ _Default Value:_ `"assistant"`
 ##### name \{#operation-chat_completion_v1_chat_completions_post+request+AssistantMessage+ToolCall+FunctionCall+name\}
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -569,13 +725,25 @@ _Default Value:_ `0`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
+
+</SectionContent>
 
 </SectionContent>
 
 </ExpandableSection>
 
-<ExpandableSection title="ToolMessage" id="operation-chat_completion_v1_chat_completions_post+request+ToolMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ToolMessage \{#operation-chat_completion_v1_chat_completions_post+request+ToolMessage\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+properties\}
 
@@ -587,7 +755,15 @@ _Default Value:_ `0`
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-chat_completion_v1_chat_completions_post+request+ToolMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk \{#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+TextChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+TextChunk+properties\}
 
@@ -613,9 +789,19 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-chat_completion_v1_chat_completions_post+request+ToolMessage+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk \{#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+ImageURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -629,7 +815,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-chat_completion_v1_chat_completions_post+request+ToolMessage+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL \{#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+ImageURLChunk+ImageURL\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+ImageURLChunk+ImageURL+properties\}
 
@@ -653,6 +847,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -669,9 +865,19 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="DocumentURLChunk" id="operation-chat_completion_v1_chat_completions_post+request+ToolMessage+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk \{#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+DocumentURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+DocumentURLChunk+properties\}
 
@@ -707,9 +913,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ReferenceChunk" id="operation-chat_completion_v1_chat_completions_post+request+ToolMessage+ReferenceChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ReferenceChunk \{#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+ReferenceChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+ReferenceChunk+properties\}
 
@@ -732,6 +948,8 @@ _Default Value:_ `"document_url"`
 </Property>
 
 _Default Value:_ `"reference"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -768,6 +986,8 @@ _Default Value:_ `"tool"`
 ##### tool_call_id \{#operation-chat_completion_v1_chat_completions_post+request+ToolMessage+tool_call_id\}
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -821,7 +1041,15 @@ mistral-small-latest
 
 </Property>
 
-<ExpandableSection title="Prediction" id="operation-chat_completion_v1_chat_completions_post+request+Prediction">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### Prediction \{#operation-chat_completion_v1_chat_completions_post+request+Prediction\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+Prediction+properties\}
 
@@ -846,6 +1074,8 @@ _Default Value:_ `""`
 </Property>
 
 _Default Value:_ `"content"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -893,7 +1123,15 @@ presence_penalty determines how much the model penalizes the repetition of words
 
 </Property>
 
-<ExpandableSection title="ResponseFormat" id="operation-chat_completion_v1_chat_completions_post+request+ResponseFormat">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ResponseFormat \{#operation-chat_completion_v1_chat_completions_post+request+ResponseFormat\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+ResponseFormat+properties\}
 
@@ -905,7 +1143,15 @@ presence_penalty determines how much the model penalizes the repetition of words
 
 </Property>
 
-<ExpandableSection title="JsonSchema" id="operation-chat_completion_v1_chat_completions_post+request+ResponseFormat+JsonSchema">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### JsonSchema \{#operation-chat_completion_v1_chat_completions_post+request+ResponseFormat+JsonSchema\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+ResponseFormat+JsonSchema+properties\}
 
@@ -949,6 +1195,8 @@ presence_penalty determines how much the model penalizes the repetition of words
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -962,6 +1210,8 @@ presence_penalty determines how much the model penalizes the repetition of words
 </Property>
 
 An object specifying the format that the model must output. Setting to `\{ "type": "json_object" \}` enables JSON mode, which guarantees the message the model generates is in JSON. When using JSON mode you MUST also instruct the model to produce JSON yourself with a system or a user message.
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1025,7 +1275,15 @@ _Default Value:_ `false`
 
 </Property>
 
-<ExpandableSection title="ToolChoice" id="operation-chat_completion_v1_chat_completions_post+request+ToolChoice">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ToolChoice \{#operation-chat_completion_v1_chat_completions_post+request+ToolChoice\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 ToolChoice is either a ToolChoiceEnum or a ToolChoice
 
@@ -1041,7 +1299,15 @@ ToolChoice is either a ToolChoiceEnum or a ToolChoice
 
 this restriction of `Function` is used to select a specific function to call
 
-<ExpandableSection title="FunctionName" id="operation-chat_completion_v1_chat_completions_post+request+ToolChoice+FunctionName">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### FunctionName \{#operation-chat_completion_v1_chat_completions_post+request+ToolChoice+FunctionName\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 this restriction of `Function` is used to select a specific function to call
 
@@ -1054,6 +1320,8 @@ this restriction of `Function` is used to select a specific function to call
 ##### name \{#operation-chat_completion_v1_chat_completions_post+request+ToolChoice+FunctionName+name\}
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1071,6 +1339,8 @@ this restriction of `Function` is used to select a specific function to call
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1083,7 +1353,15 @@ this restriction of `Function` is used to select a specific function to call
 
 </Property>
 
-<ExpandableSection title="Tool" id="operation-chat_completion_v1_chat_completions_post+request+Tool">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### Tool \{#operation-chat_completion_v1_chat_completions_post+request+Tool\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+Tool+properties\}
 
@@ -1095,7 +1373,15 @@ this restriction of `Function` is used to select a specific function to call
 
 </Property>
 
-<ExpandableSection title="Function" id="operation-chat_completion_v1_chat_completions_post+request+Tool+Function">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### Function \{#operation-chat_completion_v1_chat_completions_post+request+Tool+Function\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+request+Tool+Function+properties\}
 
@@ -1139,6 +1425,8 @@ this restriction of `Function` is used to select a specific function to call
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1150,6 +1438,8 @@ this restriction of `Function` is used to select a specific function to call
 ##### type \{#operation-chat_completion_v1_chat_completions_post+request+Tool+type\}
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1179,7 +1469,7 @@ Nucleus sampling, where the model considers the results of the tokens with `top_
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-chat_completion_v1_chat_completions_post+responses\}
+### Response \{#operation-chat_completion_v1_chat_completions_post+responses\}
 
 </SectionTitle>
 
@@ -1193,7 +1483,7 @@ Nucleus sampling, where the model considers the results of the tokens with `top_
 
 Successful Response
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1209,7 +1499,15 @@ Successful Response
 
 </Property>
 
-<ExpandableSection title="ChatCompletionChoice" id="operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ChatCompletionChoice \{#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+properties\}
 
@@ -1253,7 +1551,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="AssistantMessage" id="operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### AssistantMessage \{#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+properties\}
 
@@ -1265,7 +1571,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk \{#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+TextChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+TextChunk+properties\}
 
@@ -1291,9 +1605,19 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk \{#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -1307,7 +1631,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL \{#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk+ImageURL\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk+ImageURL+properties\}
 
@@ -1331,6 +1663,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1347,9 +1681,19 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="DocumentURLChunk" id="operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk \{#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+DocumentURLChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+DocumentURLChunk+properties\}
 
@@ -1385,9 +1729,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ReferenceChunk" id="operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ReferenceChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ReferenceChunk \{#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ReferenceChunk\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ReferenceChunk+properties\}
 
@@ -1410,6 +1764,8 @@ _Default Value:_ `"document_url"`
 </Property>
 
 _Default Value:_ `"reference"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1451,7 +1807,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="ToolCall" id="operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ToolCall \{#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+properties\}
 
@@ -1463,7 +1827,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="FunctionCall" id="operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### FunctionCall \{#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall+properties\}
 
@@ -1484,6 +1856,8 @@ _Default Value:_ `"assistant"`
 ##### name \{#operation-chat_completion_v1_chat_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall+name\}
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1525,11 +1899,17 @@ _Default Value:_ `0`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1609,7 +1989,15 @@ chat.completion
 
 </Property>
 
-<ExpandableSection title="UsageInfo" id="operation-chat_completion_v1_chat_completions_post+200+application-json+UsageInfo">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### UsageInfo \{#operation-chat_completion_v1_chat_completions_post+200+application-json+UsageInfo\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-chat_completion_v1_chat_completions_post+200+application-json+UsageInfo+properties\}
 
@@ -1660,98 +2048,6 @@ _Example:_
 ```
 
 </SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-<SectionTab slot="tab" id="operation-chat_completion_v1_chat_completions_post+422+application-json">
-
-422
-
-</SectionTab>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-chat_completion_v1_chat_completions_post+422+application-json">
-
-Validation Error
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-chat_completion_v1_chat_completions_post+422+application-json+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-chat_completion_v1_chat_completions_post+422+application-json+Security\">Security</a>","children":[],"breakoutSubTypes":[{"label":"Security","schema":{"type":"object","description":null,"examples":[],"properties":{"ApiKey":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["ApiKey"],"name":"Security","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### HttpMeta \{#operation-chat_completion_v1_chat_completions_post+422+application-json+HttpMeta\}
-
-</Property>
-
-<ExpandableSection title="Security" id="operation-chat_completion_v1_chat_completions_post+422+application-json+Security">
-
-#### Properties \{#operation-chat_completion_v1_chat_completions_post+422+application-json+Security+properties\}
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-chat_completion_v1_chat_completions_post+422+application-json+Security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-chat_completion_v1_chat_completions_post+422+application-json+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-chat_completion_v1_chat_completions_post+422+application-json+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### detail \{#operation-chat_completion_v1_chat_completions_post+422+application-json+detail\}
-
-</Property>
-
-<ExpandableSection title="ValidationError" id="operation-chat_completion_v1_chat_completions_post+422+application-json+ValidationError">
-
-#### Properties \{#operation-chat_completion_v1_chat_completions_post+422+application-json+ValidationError+properties\}
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### loc \{#operation-chat_completion_v1_chat_completions_post+422+application-json+ValidationError+loc\}
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### msg \{#operation-chat_completion_v1_chat_completions_post+422+application-json+ValidationError+msg\}
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### type \{#operation-chat_completion_v1_chat_completions_post+422+application-json+ValidationError+type\}
-
-</Property>
 
 </SectionContent>
 
