--- a/examples/docusaurus/mistral/docs/api/tag/files.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/files.mdx
@@ -33,7 +33,7 @@ Returns a list of files that belong to the user's organization.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -49,7 +49,15 @@ OK
 
 </Property>
 
-<ExpandableSection title="FileSchema" id="operation-files_api_routes_list_files+200+application-json+FileSchema">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### FileSchema \{#operation-files_api_routes_list_files+200+application-json+FileSchema\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-files_api_routes_list_files+200+application-json+FileSchema+properties\}
 
@@ -183,6 +191,8 @@ _Example:_
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -223,7 +233,7 @@ The size of individual files can be a maximum of 512 MB. The Fine-tuning API onl
 
 Please contact us if you need to increase these storage limits.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -233,7 +243,7 @@ Please contact us if you need to increase these storage limits.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -259,7 +269,15 @@ The File object (not file name) to be uploaded.
  file=@path/to/your/file.jsonl
  ```
 
-<ExpandableSection title="File" id="operation-files_api_routes_upload_file+request+File">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### File \{#operation-files_api_routes_upload_file+request+File\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 The File object (not file name) to be uploaded.
  To upload a file and specify a custom file name you should format your request as such:
@@ -290,6 +308,8 @@ The File object (not file name) to be uploaded.
 ##### fileName \{#operation-files_api_routes_upload_file+request+File+fileName\}
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -331,7 +351,7 @@ The File object (not file name) to be uploaded.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -481,7 +501,7 @@ _Retrieve File_
 
 Returns information about a specific file.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -493,7 +513,7 @@ Returns information about a specific file.
 
 ##### file\_id <Pill variant="warning">required</Pill> \{#operation-files_api_routes_retrieve_file+parameters+file_id\}
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -535,7 +555,7 @@ Returns information about a specific file.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -695,7 +715,7 @@ _Delete File_
 
 Delete a file.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -707,7 +727,7 @@ Delete a file.
 
 ##### file\_id <Pill variant="warning">required</Pill> \{#operation-files_api_routes_delete_file+parameters+file_id\}
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -749,7 +769,7 @@ Delete a file.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -823,7 +843,7 @@ _Download File_
 
 Download a file
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -835,7 +855,7 @@ Download a file
 
 ##### file\_id <Pill variant="warning">required</Pill> \{#operation-files_api_routes_download_file+parameters+file_id\}
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -877,7 +897,7 @@ Download a file
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -907,7 +927,7 @@ OK
 
 Get Signed Url
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -919,7 +939,7 @@ Get Signed Url
 
 ##### file\_id <Pill variant="warning">required</Pill> \{#operation-files_api_routes_get_signed_url+parameters+file_id\}
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -947,7 +967,7 @@ Get Signed Url
 
 Number of hours before the url becomes invalid. Defaults to 24h
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -991,7 +1011,7 @@ Number of hours before the url becomes invalid. Defaults to 24h
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
