--- a/examples/docusaurus/mistral/docs/api/tag/fine-tuning/jobs.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/fine-tuning/jobs.mdx
@@ -33,7 +33,7 @@ Get a list of fine-tuning jobs for your organization and user.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -49,7 +49,15 @@ OK
 
 </Property>
 
-<ExpandableSection title="CompletionJobOut" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### CompletionJobOut \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+properties\}
 
@@ -93,7 +101,15 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
 
 </Property>
 
-<ExpandableSection title="CompletionTrainingParameters" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+CompletionTrainingParameters">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### CompletionTrainingParameters \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+CompletionTrainingParameters\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+CompletionTrainingParameters+properties\}
 
@@ -169,6 +185,8 @@ _Default Value:_ `0.0001`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -193,7 +211,15 @@ The ID of the job.
 
 </Property>
 
-<ExpandableSection title="WandbIntegrationOut" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+WandbIntegrationOut">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### WandbIntegrationOut \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+WandbIntegrationOut\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+WandbIntegrationOut+properties\}
 
@@ -251,6 +277,8 @@ _Default Value:_ `"wandb"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -277,7 +305,15 @@ _Default Value:_ `"completion"`
 
 </Property>
 
-<ExpandableSection title="JobMetadataOut" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+JobMetadataOut">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### JobMetadataOut \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+JobMetadataOut\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+JobMetadataOut+properties\}
 
@@ -351,6 +387,8 @@ _Default Value:_ `"completion"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -401,7 +439,15 @@ _Default Value:_ `"job"`
 
 </Property>
 
-<ExpandableSection title="WandbIntegrationOut" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+WandbIntegrationOut">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### WandbIntegrationOut \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+WandbIntegrationOut\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+WandbIntegrationOut+properties\}
 
@@ -456,6 +502,8 @@ _Default Value:_ `"wandb"`
 ##### url \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+WandbIntegrationOut+url\}
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -517,9 +565,19 @@ A list containing the IDs of uploaded files that contain training data.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ClassifierJobOut" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ClassifierJobOut \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+properties\}
 
@@ -563,7 +621,15 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
 
 </Property>
 
-<ExpandableSection title="ClassifierTrainingParameters" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+ClassifierTrainingParameters">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ClassifierTrainingParameters \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+ClassifierTrainingParameters\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+ClassifierTrainingParameters+properties\}
 
@@ -629,6 +695,8 @@ _Default Value:_ `0.0001`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -653,7 +721,15 @@ The ID of the job.
 
 </Property>
 
-<ExpandableSection title="WandbIntegrationOut" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+WandbIntegrationOut">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### WandbIntegrationOut \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+WandbIntegrationOut\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+WandbIntegrationOut+properties\}
 
@@ -711,6 +787,8 @@ _Default Value:_ `"wandb"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -737,7 +815,15 @@ _Default Value:_ `"classifier"`
 
 </Property>
 
-<ExpandableSection title="JobMetadataOut" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+JobMetadataOut">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### JobMetadataOut \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+JobMetadataOut\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+JobMetadataOut+properties\}
 
@@ -808,6 +894,8 @@ _Default Value:_ `"classifier"`
 ##### train_tokens_per_step \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+JobMetadataOut+train_tokens_per_step\}
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -907,6 +995,8 @@ A list containing the IDs of uploaded files that contain training data.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -945,7 +1035,7 @@ _Create Fine Tuning Job_
 
 Create a new fine-tuning job, it will be queued for processing.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -955,7 +1045,7 @@ Create a new fine-tuning job, it will be queued for processing.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -983,7 +1073,15 @@ This field will be required in a future release.
 
 </Property>
 
-<ExpandableSection title="ClassifierTargetIn" id="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+ClassifierTargetIn">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ClassifierTargetIn \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+ClassifierTargetIn\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+ClassifierTargetIn+properties\}
 
@@ -1029,6 +1127,8 @@ _Default Value:_ `1`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1041,7 +1141,15 @@ _Default Value:_ `1`
 
 </Property>
 
-<ExpandableSection title="CompletionTrainingParametersIn" id="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+CompletionTrainingParametersIn">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### CompletionTrainingParametersIn \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+CompletionTrainingParametersIn\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 The fine-tuning hyperparameter settings used in a fine-tune job.
 
@@ -1121,9 +1229,19 @@ _Default Value:_ `0.0001`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ClassifierTrainingParametersIn" id="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+ClassifierTrainingParametersIn">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ClassifierTrainingParametersIn \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+ClassifierTrainingParametersIn\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 The fine-tuning hyperparameter settings used in a classifier fine-tune job.
 
@@ -1193,6 +1311,8 @@ _Default Value:_ `0.0001`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1205,7 +1325,15 @@ _Default Value:_ `0.0001`
 
 </Property>
 
-<ExpandableSection title="WandbIntegration" id="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+WandbIntegration">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### WandbIntegration \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+WandbIntegration\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+WandbIntegration+properties\}
 
@@ -1262,6 +1390,8 @@ The name of the project that the new run will be created under.
 </Property>
 
 _Default Value:_ `"wandb"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1311,7 +1441,15 @@ The name of the model to fine-tune.
 
 </Property>
 
-<ExpandableSection title="WandbIntegration" id="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+WandbIntegration">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### WandbIntegration \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+WandbIntegration\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+WandbIntegration+properties\}
 
@@ -1371,6 +1509,8 @@ _Default Value:_ `"wandb"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1393,7 +1533,15 @@ _Default Value:_ `"wandb"`
 
 </Property>
 
-<ExpandableSection title="TrainingFile" id="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+TrainingFile">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TrainingFile \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+TrainingFile\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+TrainingFile+properties\}
 
@@ -1416,6 +1564,8 @@ _Default Value:_ `"wandb"`
 </Property>
 
 _Default Value:_ `1`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1457,7 +1607,7 @@ _Default Value:_ `1`
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1489,7 +1639,7 @@ _Get Fine Tuning Job_
 
 Get a fine-tuned job details by its UUID.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1503,7 +1653,7 @@ Get a fine-tuned job details by its UUID.
 
 The ID of the job to analyse.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1547,7 +1697,7 @@ The ID of the job to analyse.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1579,7 +1729,7 @@ _Cancel Fine Tuning Job_
 
 Request the cancellation of a fine tuning job.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1593,7 +1743,7 @@ Request the cancellation of a fine tuning job.
 
 The ID of the job to cancel.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1637,7 +1787,7 @@ The ID of the job to cancel.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1669,7 +1819,7 @@ _Start Fine Tuning Job_
 
 Request the start of a validated fine tuning job.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1681,7 +1831,7 @@ Request the start of a validated fine tuning job.
 
 ##### job\_id <Pill variant="warning">required</Pill> \{#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+parameters+job_id\}
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1723,7 +1873,7 @@ Request the start of a validated fine tuning job.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
