--- a/examples/docusaurus/petstore/docs/api/index.mdx
+++ b/examples/docusaurus/petstore/docs/api/index.mdx
@@ -3,6 +3,9 @@ sidebar_position: 1
 sidebar_label: About
 ---
 
+import "@speakeasy-api/docs-md/docusaurus.css";
+
+
 # About PokéAPI
 
 _Version: 2.7.0_
