--- a/examples/docusaurus/petstore/docs/api/tag/machines.mdx
+++ b/examples/docusaurus/petstore/docs/api/tag/machines.mdx
@@ -3,7 +3,8 @@ sidebar_position: 2.7
 sidebar_label: Machines
 ---
 
-import { Pill, Section, SectionTitle, SectionContent, ExpandableSection, TabbedSection, SectionTab } from "@speakeasy-api/docs-md/docusaurus";
+import "@speakeasy-api/docs-md/docusaurus.css";
+import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSection, TabbedSection, SectionTab } from "@speakeasy-api/docs-md/docusaurus";
 
 
 # Machines Operations \{#machines\}
@@ -14,7 +15,7 @@ _List machines_
 
 Machines are the representation of items that teach moves to Pokémon. They vary from version to version, so it is not certain that one specific TM or HM corresponds to a single Machine.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -24,7 +25,7 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -34,21 +35,43 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### basicAuth <Pill variant="info"><a href="#operation-api_v2_machine_list+security+SchemeBasicAuth">SchemeBasicAuth</a></Pill> \{#operation-api_v2_machine_list+security+basicAuth\}
+<Property typeInfo={{"label":"SchemeBasicAuth","linkedLabel":"<a href=\"#operation-api_v2_machine_list+security+SchemeBasicAuth\">SchemeBasicAuth</a>","children":[],"breakoutSubTypes":[{"label":"SchemeBasicAuth","schema":{"type":"object","description":null,"examples":[],"properties":{"Password":{"type":"string","description":null,"examples":[],"defaultValue":null},"Username":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["Username","Password"],"name":"SchemeBasicAuth","defaultValue":null}}]}} typeAnnotations={[]}>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_machine_list+security+SchemeBasicAuth">
+##### basicAuth \{#operation-api_v2_machine_list+security+basicAuth\}
+
+</Property>
+
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth \{#operation-api_v2_machine_list+security+SchemeBasicAuth\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-api_v2_machine_list+security+SchemeBasicAuth+properties\}
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### Password <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_machine_list+security+SchemeBasicAuth+Password\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### Password \{#operation-api_v2_machine_list+security+SchemeBasicAuth+Password\}
+
+</Property>
 
 </SectionContent>
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### Username <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_machine_list+security+SchemeBasicAuth+Username\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### Username \{#operation-api_v2_machine_list+security+SchemeBasicAuth+Username\}
+
+</Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -58,7 +81,11 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### cookieAuth <Pill variant="info">string</Pill> \{#operation-api_v2_machine_list+security+cookieAuth\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+
+##### cookieAuth \{#operation-api_v2_machine_list+security+cookieAuth\}
+
+</Property>
 
 </SectionContent>
 
@@ -68,7 +95,7 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -82,7 +109,7 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 Number of results to return per page.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -92,7 +119,11 @@ Number of results to return per page.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### Security <Pill variant="warning">required</Pill> <Pill variant="info">integer</Pill> \{#operation-api_v2_machine_list+parameters+Security\}
+<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### Security \{#operation-api_v2_machine_list+parameters+Security\}
+
+</Property>
 
 Number of results to return per page.
 
@@ -108,7 +139,7 @@ Number of results to return per page.
 
 The initial index from which to return the results.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -118,7 +149,11 @@ The initial index from which to return the results.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### Security <Pill variant="warning">required</Pill> <Pill variant="info">integer</Pill> \{#operation-api_v2_machine_list+parameters+Security\}
+<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### Security \{#operation-api_v2_machine_list+parameters+Security\}
+
+</Property>
 
 The initial index from which to return the results.
 
@@ -135,7 +170,7 @@ The initial index from which to return the results.
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -145,7 +180,11 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### Security <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_machine_list+parameters+Security\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### Security \{#operation-api_v2_machine_list+parameters+Security\}
+
+</Property>
 
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
@@ -162,7 +201,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-api_v2_machine_list+responses\}
+### Response \{#operation-api_v2_machine_list+responses\}
 
 </SectionTitle>
 
@@ -174,7 +213,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_machine_list+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -184,7 +223,11 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### count <Pill variant="info">integer</Pill> \{#operation-api_v2_machine_list+200+application-json+count\}
+<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+
+##### count \{#operation-api_v2_machine_list+200+application-json+count\}
+
+</Property>
 
 _Example:_
 
@@ -196,7 +239,11 @@ _Example:_
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### next <Pill variant="info">string | null</Pill> \{#operation-api_v2_machine_list+200+application-json+next\}
+<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+
+##### next \{#operation-api_v2_machine_list+200+application-json+next\}
+
+</Property>
 
 _Example:_
 
@@ -208,7 +255,11 @@ http://api.example.org/accounts/?offset=400&limit=100
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### previous <Pill variant="info">string | null</Pill> \{#operation-api_v2_machine_list+200+application-json+previous\}
+<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+
+##### previous \{#operation-api_v2_machine_list+200+application-json+previous\}
+
+</Property>
 
 _Example:_
 
@@ -220,15 +271,33 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### results <Pill variant="info">array&lt;<a href="#operation-api_v2_machine_list+200+application-json+MachineSummary">MachineSummary</a>&gt;</Pill> \{#operation-api_v2_machine_list+200+application-json+results\}
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_machine_list+200+application-json+MachineSummary\">MachineSummary</a>","children":[{"label":"MachineSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+200+application-json+MachineSummary\">MachineSummary</a>","children":[],"breakoutSubTypes":[{"label":"MachineSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["url"],"name":"MachineSummary","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"MachineSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["url"],"name":"MachineSummary","defaultValue":null}}]}} typeAnnotations={[]}>
 
-<ExpandableSection title="MachineSummary" id="operation-api_v2_machine_list+200+application-json+MachineSummary">
+##### results \{#operation-api_v2_machine_list+200+application-json+results\}
+
+</Property>
+
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### MachineSummary \{#operation-api_v2_machine_list+200+application-json+MachineSummary\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-api_v2_machine_list+200+application-json+MachineSummary+properties\}
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### url <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_machine_list+200+application-json+MachineSummary+url\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### url \{#operation-api_v2_machine_list+200+application-json+MachineSummary+url\}
+
+</Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -248,7 +317,7 @@ _Get machine_
 
 Machines are the representation of items that teach moves to Pokémon. They vary from version to version, so it is not certain that one specific TM or HM corresponds to a single Machine.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -258,7 +327,7 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -268,21 +337,43 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### basicAuth <Pill variant="info"><a href="#operation-api_v2_machine_retrieve+security+SchemeBasicAuth">SchemeBasicAuth</a></Pill> \{#operation-api_v2_machine_retrieve+security+basicAuth\}
+<Property typeInfo={{"label":"SchemeBasicAuth","linkedLabel":"<a href=\"#operation-api_v2_machine_retrieve+security+SchemeBasicAuth\">SchemeBasicAuth</a>","children":[],"breakoutSubTypes":[{"label":"SchemeBasicAuth","schema":{"type":"object","description":null,"examples":[],"properties":{"Password":{"type":"string","description":null,"examples":[],"defaultValue":null},"Username":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["Username","Password"],"name":"SchemeBasicAuth","defaultValue":null}}]}} typeAnnotations={[]}>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_machine_retrieve+security+SchemeBasicAuth">
+##### basicAuth \{#operation-api_v2_machine_retrieve+security+basicAuth\}
+
+</Property>
+
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth \{#operation-api_v2_machine_retrieve+security+SchemeBasicAuth\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-api_v2_machine_retrieve+security+SchemeBasicAuth+properties\}
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### Password <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_machine_retrieve+security+SchemeBasicAuth+Password\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### Password \{#operation-api_v2_machine_retrieve+security+SchemeBasicAuth+Password\}
+
+</Property>
 
 </SectionContent>
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### Username <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_machine_retrieve+security+SchemeBasicAuth+Username\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### Username \{#operation-api_v2_machine_retrieve+security+SchemeBasicAuth+Username\}
+
+</Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -292,7 +383,11 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### cookieAuth <Pill variant="info">string</Pill> \{#operation-api_v2_machine_retrieve+security+cookieAuth\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+
+##### cookieAuth \{#operation-api_v2_machine_retrieve+security+cookieAuth\}
+
+</Property>
 
 </SectionContent>
 
@@ -302,7 +397,7 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -316,7 +411,7 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 This parameter can be a string or an integer.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -326,7 +421,11 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### Security <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_machine_retrieve+parameters+Security\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### Security \{#operation-api_v2_machine_retrieve+parameters+Security\}
+
+</Property>
 
 This parameter can be a string or an integer.
 
@@ -342,7 +441,7 @@ This parameter can be a string or an integer.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-api_v2_machine_retrieve+responses\}
+### Response \{#operation-api_v2_machine_retrieve+responses\}
 
 </SectionTitle>
 
@@ -354,7 +453,7 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_machine_retrieve+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -364,27 +463,53 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### id <Pill variant="warning">required</Pill> <Pill variant="info">integer</Pill> \{#operation-api_v2_machine_retrieve+200+application-json+id\}
+<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### id \{#operation-api_v2_machine_retrieve+200+application-json+id\}
+
+</Property>
 
 </SectionContent>
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### item <Pill variant="warning">required</Pill> <Pill variant="info"><a href="#operation-api_v2_machine_retrieve+200+application-json+ItemSummary">ItemSummary</a></Pill> \{#operation-api_v2_machine_retrieve+200+application-json+item\}
+<Property typeInfo={{"label":"ItemSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_retrieve+200+application-json+ItemSummary\">ItemSummary</a>","children":[],"breakoutSubTypes":[{"label":"ItemSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"name":{"type":"string","description":null,"examples":[],"defaultValue":null},"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","url"],"name":"ItemSummary","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<ExpandableSection title="ItemSummary" id="operation-api_v2_machine_retrieve+200+application-json+ItemSummary">
+##### item \{#operation-api_v2_machine_retrieve+200+application-json+item\}
+
+</Property>
+
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ItemSummary \{#operation-api_v2_machine_retrieve+200+application-json+ItemSummary\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-api_v2_machine_retrieve+200+application-json+ItemSummary+properties\}
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### name <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_machine_retrieve+200+application-json+ItemSummary+name\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### name \{#operation-api_v2_machine_retrieve+200+application-json+ItemSummary+name\}
+
+</Property>
 
 </SectionContent>
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### url <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_machine_retrieve+200+application-json+ItemSummary+url\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### url \{#operation-api_v2_machine_retrieve+200+application-json+ItemSummary+url\}
+
+</Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -394,21 +519,43 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### move <Pill variant="warning">required</Pill> <Pill variant="info"><a href="#operation-api_v2_machine_retrieve+200+application-json+MoveSummary">MoveSummary</a></Pill> \{#operation-api_v2_machine_retrieve+200+application-json+move\}
+<Property typeInfo={{"label":"MoveSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_retrieve+200+application-json+MoveSummary\">MoveSummary</a>","children":[],"breakoutSubTypes":[{"label":"MoveSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"name":{"type":"string","description":null,"examples":[],"defaultValue":null},"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","url"],"name":"MoveSummary","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<ExpandableSection title="MoveSummary" id="operation-api_v2_machine_retrieve+200+application-json+MoveSummary">
+##### move \{#operation-api_v2_machine_retrieve+200+application-json+move\}
+
+</Property>
+
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### MoveSummary \{#operation-api_v2_machine_retrieve+200+application-json+MoveSummary\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-api_v2_machine_retrieve+200+application-json+MoveSummary+properties\}
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### name <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_machine_retrieve+200+application-json+MoveSummary+name\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### name \{#operation-api_v2_machine_retrieve+200+application-json+MoveSummary+name\}
+
+</Property>
 
 </SectionContent>
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### url <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_machine_retrieve+200+application-json+MoveSummary+url\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### url \{#operation-api_v2_machine_retrieve+200+application-json+MoveSummary+url\}
+
+</Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -418,21 +565,43 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### version_group <Pill variant="warning">required</Pill> <Pill variant="info"><a href="#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary">VersionGroupSummary</a></Pill> \{#operation-api_v2_machine_retrieve+200+application-json+version_group\}
+<Property typeInfo={{"label":"VersionGroupSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary\">VersionGroupSummary</a>","children":[],"breakoutSubTypes":[{"label":"VersionGroupSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"name":{"type":"string","description":null,"examples":[],"defaultValue":null},"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","url"],"name":"VersionGroupSummary","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<ExpandableSection title="VersionGroupSummary" id="operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary">
+##### version_group \{#operation-api_v2_machine_retrieve+200+application-json+version_group\}
+
+</Property>
+
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### VersionGroupSummary \{#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary\}
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties \{#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary+properties\}
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### name <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary+name\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### name \{#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary+name\}
+
+</Property>
 
 </SectionContent>
 
 <SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
-##### url <Pill variant="warning">required</Pill> <Pill variant="info">string</Pill> \{#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary+url\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### url \{#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary+url\}
+
+</Property>
+
+</SectionContent>
 
 </SectionContent>
 
