--- a/examples/nextra/mistral/src/app/api/tag/agents/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/agents/page.mdx
@@ -12,7 +12,7 @@ import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSectio
 
 Agents Completion
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -22,7 +22,7 @@ Agents Completion
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -74,7 +74,15 @@ frequency_penalty penalizes the repetition of words based on their frequency in 
 
 The prompt(s) to generate completions for, encoded as a list of dict with role and content.
 
-<ExpandableSection title="SystemMessage" id="operation-agents_completion_v1_agents_completions_post+request+SystemMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SystemMessage [#operation-agents_completion_v1_agents_completions_post+request+SystemMessage]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+SystemMessage+properties]
 
@@ -86,7 +94,15 @@ The prompt(s) to generate completions for, encoded as a list of dict with role a
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-agents_completion_v1_agents_completions_post+request+SystemMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk [#operation-agents_completion_v1_agents_completions_post+request+SystemMessage+TextChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+SystemMessage+TextChunk+properties]
 
@@ -112,6 +128,8 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -128,9 +146,19 @@ _Default Value:_ `"system"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="UserMessage" id="operation-agents_completion_v1_agents_completions_post+request+UserMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### UserMessage [#operation-agents_completion_v1_agents_completions_post+request+UserMessage]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+UserMessage+properties]
 
@@ -142,7 +170,15 @@ _Default Value:_ `"system"`
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-agents_completion_v1_agents_completions_post+request+UserMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk [#operation-agents_completion_v1_agents_completions_post+request+UserMessage+TextChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+UserMessage+TextChunk+properties]
 
@@ -168,9 +204,19 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-agents_completion_v1_agents_completions_post+request+UserMessage+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk [#operation-agents_completion_v1_agents_completions_post+request+UserMessage+ImageURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -184,7 +230,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-agents_completion_v1_agents_completions_post+request+UserMessage+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL [#operation-agents_completion_v1_agents_completions_post+request+UserMessage+ImageURLChunk+ImageURL]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+UserMessage+ImageURLChunk+ImageURL+properties]
 
@@ -208,6 +262,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -224,9 +280,19 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="DocumentURLChunk" id="operation-agents_completion_v1_agents_completions_post+request+UserMessage+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk [#operation-agents_completion_v1_agents_completions_post+request+UserMessage+DocumentURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+UserMessage+DocumentURLChunk+properties]
 
@@ -262,9 +328,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ReferenceChunk" id="operation-agents_completion_v1_agents_completions_post+request+UserMessage+ReferenceChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ReferenceChunk [#operation-agents_completion_v1_agents_completions_post+request+UserMessage+ReferenceChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+UserMessage+ReferenceChunk+properties]
 
@@ -290,6 +366,8 @@ _Default Value:_ `"reference"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -306,9 +384,19 @@ _Default Value:_ `"user"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="AssistantMessage" id="operation-agents_completion_v1_agents_completions_post+request+AssistantMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### AssistantMessage [#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+properties]
 
@@ -320,7 +408,15 @@ _Default Value:_ `"user"`
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk [#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+TextChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+TextChunk+properties]
 
@@ -346,9 +442,19 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk [#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ImageURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -362,7 +468,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL [#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ImageURLChunk+ImageURL]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ImageURLChunk+ImageURL+properties]
 
@@ -386,6 +500,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -402,9 +518,19 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="DocumentURLChunk" id="operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk [#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+DocumentURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+DocumentURLChunk+properties]
 
@@ -440,9 +566,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ReferenceChunk" id="operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ReferenceChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ReferenceChunk [#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ReferenceChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ReferenceChunk+properties]
 
@@ -465,6 +601,8 @@ _Default Value:_ `"document_url"`
 </Property>
 
 _Default Value:_ `"reference"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -506,7 +644,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="ToolCall" id="operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ToolCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ToolCall [#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ToolCall]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ToolCall+properties]
 
@@ -518,7 +664,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="FunctionCall" id="operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ToolCall+FunctionCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### FunctionCall [#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ToolCall+FunctionCall]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ToolCall+FunctionCall+properties]
 
@@ -539,6 +693,8 @@ _Default Value:_ `"assistant"`
 ##### name [#operation-agents_completion_v1_agents_completions_post+request+AssistantMessage+ToolCall+FunctionCall+name]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -580,13 +736,25 @@ _Default Value:_ `0`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
+
+</SectionContent>
 
 </SectionContent>
 
 </ExpandableSection>
 
-<ExpandableSection title="ToolMessage" id="operation-agents_completion_v1_agents_completions_post+request+ToolMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ToolMessage [#operation-agents_completion_v1_agents_completions_post+request+ToolMessage]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+properties]
 
@@ -598,7 +766,15 @@ _Default Value:_ `0`
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-agents_completion_v1_agents_completions_post+request+ToolMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk [#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+TextChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+TextChunk+properties]
 
@@ -624,9 +800,19 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-agents_completion_v1_agents_completions_post+request+ToolMessage+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk [#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+ImageURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -640,7 +826,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-agents_completion_v1_agents_completions_post+request+ToolMessage+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL [#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+ImageURLChunk+ImageURL]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+ImageURLChunk+ImageURL+properties]
 
@@ -664,6 +858,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -680,9 +876,19 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="DocumentURLChunk" id="operation-agents_completion_v1_agents_completions_post+request+ToolMessage+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk [#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+DocumentURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+DocumentURLChunk+properties]
 
@@ -718,9 +924,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ReferenceChunk" id="operation-agents_completion_v1_agents_completions_post+request+ToolMessage+ReferenceChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ReferenceChunk [#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+ReferenceChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+ToolMessage+ReferenceChunk+properties]
 
@@ -743,6 +959,8 @@ _Default Value:_ `"document_url"`
 </Property>
 
 _Default Value:_ `"reference"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -782,6 +1000,8 @@ _Default Value:_ `"tool"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -814,7 +1034,15 @@ _Default Value:_ `"tool"`
 
 </Property>
 
-<ExpandableSection title="Prediction" id="operation-agents_completion_v1_agents_completions_post+request+Prediction">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### Prediction [#operation-agents_completion_v1_agents_completions_post+request+Prediction]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+Prediction+properties]
 
@@ -839,6 +1067,8 @@ _Default Value:_ `""`
 </Property>
 
 _Default Value:_ `"content"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -886,7 +1116,15 @@ presence_penalty determines how much the model penalizes the repetition of words
 
 </Property>
 
-<ExpandableSection title="ResponseFormat" id="operation-agents_completion_v1_agents_completions_post+request+ResponseFormat">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ResponseFormat [#operation-agents_completion_v1_agents_completions_post+request+ResponseFormat]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+ResponseFormat+properties]
 
@@ -898,7 +1136,15 @@ presence_penalty determines how much the model penalizes the repetition of words
 
 </Property>
 
-<ExpandableSection title="JsonSchema" id="operation-agents_completion_v1_agents_completions_post+request+ResponseFormat+JsonSchema">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### JsonSchema [#operation-agents_completion_v1_agents_completions_post+request+ResponseFormat+JsonSchema]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+ResponseFormat+JsonSchema+properties]
 
@@ -942,6 +1188,8 @@ presence_penalty determines how much the model penalizes the repetition of words
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -955,6 +1203,8 @@ presence_penalty determines how much the model penalizes the repetition of words
 </Property>
 
 An object specifying the format that the model must output. Setting to `\{ "type": "json_object" \}` enables JSON mode, which guarantees the message the model generates is in JSON. When using JSON mode you MUST also instruct the model to produce JSON yourself with a system or a user message.
+
+</SectionContent>
 
 </SectionContent>
 
@@ -996,7 +1246,15 @@ _Default Value:_ `false`
 
 </Property>
 
-<ExpandableSection title="ToolChoice" id="operation-agents_completion_v1_agents_completions_post+request+ToolChoice">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ToolChoice [#operation-agents_completion_v1_agents_completions_post+request+ToolChoice]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 ToolChoice is either a ToolChoiceEnum or a ToolChoice
 
@@ -1012,7 +1270,15 @@ ToolChoice is either a ToolChoiceEnum or a ToolChoice
 
 this restriction of `Function` is used to select a specific function to call
 
-<ExpandableSection title="FunctionName" id="operation-agents_completion_v1_agents_completions_post+request+ToolChoice+FunctionName">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### FunctionName [#operation-agents_completion_v1_agents_completions_post+request+ToolChoice+FunctionName]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 this restriction of `Function` is used to select a specific function to call
 
@@ -1025,6 +1291,8 @@ this restriction of `Function` is used to select a specific function to call
 ##### name [#operation-agents_completion_v1_agents_completions_post+request+ToolChoice+FunctionName+name]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1042,6 +1310,8 @@ this restriction of `Function` is used to select a specific function to call
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1054,7 +1324,15 @@ this restriction of `Function` is used to select a specific function to call
 
 </Property>
 
-<ExpandableSection title="Tool" id="operation-agents_completion_v1_agents_completions_post+request+Tool">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### Tool [#operation-agents_completion_v1_agents_completions_post+request+Tool]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+Tool+properties]
 
@@ -1066,7 +1344,15 @@ this restriction of `Function` is used to select a specific function to call
 
 </Property>
 
-<ExpandableSection title="Function" id="operation-agents_completion_v1_agents_completions_post+request+Tool+Function">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### Function [#operation-agents_completion_v1_agents_completions_post+request+Tool+Function]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+request+Tool+Function+properties]
 
@@ -1110,6 +1396,8 @@ this restriction of `Function` is used to select a specific function to call
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1121,6 +1409,8 @@ this restriction of `Function` is used to select a specific function to call
 ##### type [#operation-agents_completion_v1_agents_completions_post+request+Tool+type]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1152,7 +1442,7 @@ this restriction of `Function` is used to select a specific function to call
 
 Successful Response
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1168,7 +1458,15 @@ Successful Response
 
 </Property>
 
-<ExpandableSection title="ChatCompletionChoice" id="operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ChatCompletionChoice [#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+properties]
 
@@ -1212,7 +1510,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="AssistantMessage" id="operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### AssistantMessage [#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+properties]
 
@@ -1224,7 +1530,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk [#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+TextChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+TextChunk+properties]
 
@@ -1250,9 +1564,19 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk [#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -1266,7 +1590,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL [#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk+ImageURL]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk+ImageURL+properties]
 
@@ -1290,6 +1622,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1306,9 +1640,19 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="DocumentURLChunk" id="operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk [#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+DocumentURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+DocumentURLChunk+properties]
 
@@ -1344,9 +1688,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ReferenceChunk" id="operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ReferenceChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ReferenceChunk [#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ReferenceChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ReferenceChunk+properties]
 
@@ -1369,6 +1723,8 @@ _Default Value:_ `"document_url"`
 </Property>
 
 _Default Value:_ `"reference"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1410,7 +1766,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="ToolCall" id="operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ToolCall [#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+properties]
 
@@ -1422,7 +1786,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="FunctionCall" id="operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### FunctionCall [#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall+properties]
 
@@ -1443,6 +1815,8 @@ _Default Value:_ `"assistant"`
 ##### name [#operation-agents_completion_v1_agents_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall+name]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1484,11 +1858,17 @@ _Default Value:_ `0`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1568,7 +1948,15 @@ chat.completion
 
 </Property>
 
-<ExpandableSection title="UsageInfo" id="operation-agents_completion_v1_agents_completions_post+200+application-json+UsageInfo">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### UsageInfo [#operation-agents_completion_v1_agents_completions_post+200+application-json+UsageInfo]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-agents_completion_v1_agents_completions_post+200+application-json+UsageInfo+properties]
 
@@ -1617,6 +2005,8 @@ _Example:_
 ```
 50
 ```
+
+</SectionContent>
 
 </SectionContent>
 
