--- a/examples/nextra/mistral/src/app/api/tag/batch/jobs/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/batch/jobs/page.mdx
@@ -32,7 +32,7 @@ Get a list of batch jobs for your organization and user.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -48,7 +48,15 @@ OK
 
 </Property>
 
-<ExpandableSection title="BatchJobOut" id="operation-jobs_api_routes_batch_get_batch_jobs+200+application-json+BatchJobOut">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BatchJobOut [#operation-jobs_api_routes_batch_get_batch_jobs+200+application-json+BatchJobOut]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-jobs_api_routes_batch_get_batch_jobs+200+application-json+BatchJobOut+properties]
 
@@ -110,7 +118,15 @@ OK
 
 </Property>
 
-<ExpandableSection title="BatchError" id="operation-jobs_api_routes_batch_get_batch_jobs+200+application-json+BatchJobOut+BatchError">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BatchError [#operation-jobs_api_routes_batch_get_batch_jobs+200+application-json+BatchJobOut+BatchError]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-jobs_api_routes_batch_get_batch_jobs+200+application-json+BatchJobOut+BatchError+properties]
 
@@ -133,6 +149,8 @@ _Default Value:_ `1`
 ##### message [#operation-jobs_api_routes_batch_get_batch_jobs+200+application-json+BatchJobOut+BatchError+message]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -252,6 +270,8 @@ _Default Value:_ `"batch"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -290,7 +310,7 @@ _Create Batch Job_
 
 Create a new batch job, it will be queued for processing.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -300,7 +320,7 @@ Create a new batch job, it will be queued for processing.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -384,7 +404,7 @@ _Default Value:_ `24`
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -450,7 +470,15 @@ OK
 
 </Property>
 
-<ExpandableSection title="BatchError" id="operation-jobs_api_routes_batch_create_batch_job+200+application-json+BatchError">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BatchError [#operation-jobs_api_routes_batch_create_batch_job+200+application-json+BatchError]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-jobs_api_routes_batch_create_batch_job+200+application-json+BatchError+properties]
 
@@ -473,6 +501,8 @@ _Default Value:_ `1`
 ##### message [#operation-jobs_api_routes_batch_create_batch_job+200+application-json+BatchError+message]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -604,7 +634,7 @@ _Get Batch Job_
 
 Get a batch job details by its UUID.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -616,7 +646,7 @@ Get a batch job details by its UUID.
 
 ##### job\_id <Pill variant="warning">required</Pill> [#operation-jobs_api_routes_batch_get_batch_job+parameters+job_id]
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -658,7 +688,7 @@ Get a batch job details by its UUID.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -724,7 +754,15 @@ OK
 
 </Property>
 
-<ExpandableSection title="BatchError" id="operation-jobs_api_routes_batch_get_batch_job+200+application-json+BatchError">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BatchError [#operation-jobs_api_routes_batch_get_batch_job+200+application-json+BatchError]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-jobs_api_routes_batch_get_batch_job+200+application-json+BatchError+properties]
 
@@ -747,6 +785,8 @@ _Default Value:_ `1`
 ##### message [#operation-jobs_api_routes_batch_get_batch_job+200+application-json+BatchError+message]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -878,7 +918,7 @@ _Cancel Batch Job_
 
 Request the cancellation of a batch job.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -890,7 +930,7 @@ Request the cancellation of a batch job.
 
 ##### job\_id <Pill variant="warning">required</Pill> [#operation-jobs_api_routes_batch_cancel_batch_job+parameters+job_id]
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -932,7 +972,7 @@ Request the cancellation of a batch job.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -998,7 +1038,15 @@ OK
 
 </Property>
 
-<ExpandableSection title="BatchError" id="operation-jobs_api_routes_batch_cancel_batch_job+200+application-json+BatchError">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### BatchError [#operation-jobs_api_routes_batch_cancel_batch_job+200+application-json+BatchError]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-jobs_api_routes_batch_cancel_batch_job+200+application-json+BatchError+properties]
 
@@ -1021,6 +1069,8 @@ _Default Value:_ `1`
 ##### message [#operation-jobs_api_routes_batch_cancel_batch_job+200+application-json+BatchError+message]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
