--- a/examples/nextra/mistral/src/app/api/tag/embeddings/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/embeddings/page.mdx
@@ -14,7 +14,7 @@ _Embeddings_
 
 Embeddings
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -24,7 +24,7 @@ Embeddings
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -106,7 +106,7 @@ mistral-embed
 
 Successful Response
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -122,7 +122,15 @@ Successful Response
 
 </Property>
 
-<ExpandableSection title="EmbeddingResponseData" id="operation-embeddings_v1_embeddings_post+200+application-json+EmbeddingResponseData">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### EmbeddingResponseData [#operation-embeddings_v1_embeddings_post+200+application-json+EmbeddingResponseData]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-embeddings_v1_embeddings_post+200+application-json+EmbeddingResponseData+properties]
 
@@ -165,6 +173,8 @@ _Example:_
 ```
 embedding
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -228,7 +238,15 @@ chat.completion
 
 </Property>
 
-<ExpandableSection title="UsageInfo" id="operation-embeddings_v1_embeddings_post+200+application-json+UsageInfo">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### UsageInfo [#operation-embeddings_v1_embeddings_post+200+application-json+UsageInfo]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-embeddings_v1_embeddings_post+200+application-json+UsageInfo+properties]
 
@@ -277,6 +295,8 @@ _Example:_
 ```
 50
 ```
+
+</SectionContent>
 
 </SectionContent>
 
