--- a/examples/nextra/mistral/src/app/api/tag/files/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/files/page.mdx
@@ -32,7 +32,7 @@ Returns a list of files that belong to the user's organization.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -48,7 +48,15 @@ OK
 
 </Property>
 
-<ExpandableSection title="FileSchema" id="operation-files_api_routes_list_files+200+application-json+FileSchema">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### FileSchema [#operation-files_api_routes_list_files+200+application-json+FileSchema]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-files_api_routes_list_files+200+application-json+FileSchema+properties]
 
@@ -182,6 +190,8 @@ _Example:_
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -222,7 +232,7 @@ The size of individual files can be a maximum of 512 MB. The Fine-tuning API onl
 
 Please contact us if you need to increase these storage limits.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -232,7 +242,7 @@ Please contact us if you need to increase these storage limits.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -258,7 +268,15 @@ The File object (not file name) to be uploaded.
  file=@path/to/your/file.jsonl
  ```
 
-<ExpandableSection title="File" id="operation-files_api_routes_upload_file+request+File">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### File [#operation-files_api_routes_upload_file+request+File]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 The File object (not file name) to be uploaded.
  To upload a file and specify a custom file name you should format your request as such:
@@ -289,6 +307,8 @@ The File object (not file name) to be uploaded.
 ##### fileName [#operation-files_api_routes_upload_file+request+File+fileName]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -330,7 +350,7 @@ The File object (not file name) to be uploaded.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -480,7 +500,7 @@ _Retrieve File_
 
 Returns information about a specific file.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -492,7 +512,7 @@ Returns information about a specific file.
 
 ##### file\_id <Pill variant="warning">required</Pill> [#operation-files_api_routes_retrieve_file+parameters+file_id]
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -534,7 +554,7 @@ Returns information about a specific file.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -694,7 +714,7 @@ _Delete File_
 
 Delete a file.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -706,7 +726,7 @@ Delete a file.
 
 ##### file\_id <Pill variant="warning">required</Pill> [#operation-files_api_routes_delete_file+parameters+file_id]
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -748,7 +768,7 @@ Delete a file.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -822,7 +842,7 @@ _Download File_
 
 Download a file
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -834,7 +854,7 @@ Download a file
 
 ##### file\_id <Pill variant="warning">required</Pill> [#operation-files_api_routes_download_file+parameters+file_id]
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -876,7 +896,7 @@ Download a file
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -906,7 +926,7 @@ OK
 
 Get Signed Url
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -918,7 +938,7 @@ Get Signed Url
 
 ##### file\_id <Pill variant="warning">required</Pill> [#operation-files_api_routes_get_signed_url+parameters+file_id]
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -946,7 +966,7 @@ Get Signed Url
 
 Number of hours before the url becomes invalid. Defaults to 24h
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -990,7 +1010,7 @@ Number of hours before the url becomes invalid. Defaults to 24h
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
