--- a/examples/nextra/mistral/src/app/api/tag/fim/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/fim/page.mdx
@@ -14,7 +14,7 @@ _Fim Completion_
 
 FIM completion.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -24,7 +24,7 @@ FIM completion.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -190,7 +190,7 @@ _Default Value:_ `1`
 
 Successful Response
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -206,7 +206,15 @@ Successful Response
 
 </Property>
 
-<ExpandableSection title="ChatCompletionChoice" id="operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ChatCompletionChoice [#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+properties]
 
@@ -250,7 +258,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="AssistantMessage" id="operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### AssistantMessage [#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+properties]
 
@@ -262,7 +278,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="TextChunk" id="operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+TextChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TextChunk [#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+TextChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+TextChunk+properties]
 
@@ -288,9 +312,19 @@ _Default Value:_ `"text"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ImageURLChunk" id="operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURLChunk [#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -304,7 +338,15 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </Property>
 
-<ExpandableSection title="ImageURL" id="operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk+ImageURL">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ImageURL [#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk+ImageURL]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ImageURLChunk+ImageURL+properties]
 
@@ -328,6 +370,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -344,9 +388,19 @@ _Default Value:_ `"image_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="DocumentURLChunk" id="operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+DocumentURLChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### DocumentURLChunk [#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+DocumentURLChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+DocumentURLChunk+properties]
 
@@ -382,9 +436,19 @@ _Default Value:_ `"document_url"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ReferenceChunk" id="operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ReferenceChunk">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ReferenceChunk [#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ReferenceChunk]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ReferenceChunk+properties]
 
@@ -407,6 +471,8 @@ _Default Value:_ `"document_url"`
 </Property>
 
 _Default Value:_ `"reference"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -448,7 +514,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="ToolCall" id="operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ToolCall [#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+properties]
 
@@ -460,7 +534,15 @@ _Default Value:_ `"assistant"`
 
 </Property>
 
-<ExpandableSection title="FunctionCall" id="operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### FunctionCall [#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall+properties]
 
@@ -481,6 +563,8 @@ _Default Value:_ `"assistant"`
 ##### name [#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice+AssistantMessage+ToolCall+FunctionCall+name]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -522,11 +606,17 @@ _Default Value:_ `0`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -606,7 +696,15 @@ chat.completion
 
 </Property>
 
-<ExpandableSection title="UsageInfo" id="operation-fim_completion_v1_fim_completions_post+200+application-json+UsageInfo">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### UsageInfo [#operation-fim_completion_v1_fim_completions_post+200+application-json+UsageInfo]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-fim_completion_v1_fim_completions_post+200+application-json+UsageInfo+properties]
 
@@ -655,6 +753,8 @@ _Example:_
 ```
 50
 ```
+
+</SectionContent>
 
 </SectionContent>
 
