--- a/examples/nextra/mistral/src/app/api/tag/fine-tuning/jobs/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/fine-tuning/jobs/page.mdx
@@ -32,7 +32,7 @@ Get a list of fine-tuning jobs for your organization and user.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -48,7 +48,15 @@ OK
 
 </Property>
 
-<ExpandableSection title="CompletionJobOut" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### CompletionJobOut [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+properties]
 
@@ -92,7 +100,15 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
 
 </Property>
 
-<ExpandableSection title="CompletionTrainingParameters" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+CompletionTrainingParameters">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### CompletionTrainingParameters [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+CompletionTrainingParameters]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+CompletionTrainingParameters+properties]
 
@@ -168,6 +184,8 @@ _Default Value:_ `0.0001`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -192,7 +210,15 @@ The ID of the job.
 
 </Property>
 
-<ExpandableSection title="WandbIntegrationOut" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+WandbIntegrationOut">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### WandbIntegrationOut [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+WandbIntegrationOut]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+WandbIntegrationOut+properties]
 
@@ -250,6 +276,8 @@ _Default Value:_ `"wandb"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -276,7 +304,15 @@ _Default Value:_ `"completion"`
 
 </Property>
 
-<ExpandableSection title="JobMetadataOut" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+JobMetadataOut">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### JobMetadataOut [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+JobMetadataOut]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+JobMetadataOut+properties]
 
@@ -350,6 +386,8 @@ _Default Value:_ `"completion"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -400,7 +438,15 @@ _Default Value:_ `"job"`
 
 </Property>
 
-<ExpandableSection title="WandbIntegrationOut" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+WandbIntegrationOut">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### WandbIntegrationOut [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+WandbIntegrationOut]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+WandbIntegrationOut+properties]
 
@@ -455,6 +501,8 @@ _Default Value:_ `"wandb"`
 ##### url [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+CompletionJobOut+WandbIntegrationOut+url]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -516,9 +564,19 @@ A list containing the IDs of uploaded files that contain training data.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ClassifierJobOut" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ClassifierJobOut [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+properties]
 
@@ -562,7 +620,15 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
 
 </Property>
 
-<ExpandableSection title="ClassifierTrainingParameters" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+ClassifierTrainingParameters">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ClassifierTrainingParameters [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+ClassifierTrainingParameters]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+ClassifierTrainingParameters+properties]
 
@@ -628,6 +694,8 @@ _Default Value:_ `0.0001`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -652,7 +720,15 @@ The ID of the job.
 
 </Property>
 
-<ExpandableSection title="WandbIntegrationOut" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+WandbIntegrationOut">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### WandbIntegrationOut [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+WandbIntegrationOut]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+WandbIntegrationOut+properties]
 
@@ -710,6 +786,8 @@ _Default Value:_ `"wandb"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -736,7 +814,15 @@ _Default Value:_ `"classifier"`
 
 </Property>
 
-<ExpandableSection title="JobMetadataOut" id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+JobMetadataOut">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### JobMetadataOut [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+JobMetadataOut]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+JobMetadataOut+properties]
 
@@ -807,6 +893,8 @@ _Default Value:_ `"classifier"`
 ##### train_tokens_per_step [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+200+application-json+ClassifierJobOut+JobMetadataOut+train_tokens_per_step]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -906,6 +994,8 @@ A list containing the IDs of uploaded files that contain training data.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -944,7 +1034,7 @@ _Create Fine Tuning Job_
 
 Create a new fine-tuning job, it will be queued for processing.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -954,7 +1044,7 @@ Create a new fine-tuning job, it will be queued for processing.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -982,7 +1072,15 @@ This field will be required in a future release.
 
 </Property>
 
-<ExpandableSection title="ClassifierTargetIn" id="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+ClassifierTargetIn">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ClassifierTargetIn [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+ClassifierTargetIn]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+ClassifierTargetIn+properties]
 
@@ -1028,6 +1126,8 @@ _Default Value:_ `1`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1040,7 +1140,15 @@ _Default Value:_ `1`
 
 </Property>
 
-<ExpandableSection title="CompletionTrainingParametersIn" id="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+CompletionTrainingParametersIn">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### CompletionTrainingParametersIn [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+CompletionTrainingParametersIn]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 The fine-tuning hyperparameter settings used in a fine-tune job.
 
@@ -1120,9 +1228,19 @@ _Default Value:_ `0.0001`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
-<ExpandableSection title="ClassifierTrainingParametersIn" id="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+ClassifierTrainingParametersIn">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ClassifierTrainingParametersIn [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+ClassifierTrainingParametersIn]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 The fine-tuning hyperparameter settings used in a classifier fine-tune job.
 
@@ -1192,6 +1310,8 @@ _Default Value:_ `0.0001`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1204,7 +1324,15 @@ _Default Value:_ `0.0001`
 
 </Property>
 
-<ExpandableSection title="WandbIntegration" id="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+WandbIntegration">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### WandbIntegration [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+WandbIntegration]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+WandbIntegration+properties]
 
@@ -1261,6 +1389,8 @@ The name of the project that the new run will be created under.
 </Property>
 
 _Default Value:_ `"wandb"`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1310,7 +1440,15 @@ The name of the model to fine-tune.
 
 </Property>
 
-<ExpandableSection title="WandbIntegration" id="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+WandbIntegration">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### WandbIntegration [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+WandbIntegration]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+WandbIntegration+properties]
 
@@ -1370,6 +1508,8 @@ _Default Value:_ `"wandb"`
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1392,7 +1532,15 @@ _Default Value:_ `"wandb"`
 
 </Property>
 
-<ExpandableSection title="TrainingFile" id="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+TrainingFile">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### TrainingFile [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+TrainingFile]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+TrainingFile+properties]
 
@@ -1415,6 +1563,8 @@ _Default Value:_ `"wandb"`
 </Property>
 
 _Default Value:_ `1`
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1456,7 +1606,7 @@ _Default Value:_ `1`
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1488,7 +1638,7 @@ _Get Fine Tuning Job_
 
 Get a fine-tuned job details by its UUID.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1502,7 +1652,7 @@ Get a fine-tuned job details by its UUID.
 
 The ID of the job to analyse.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1546,7 +1696,7 @@ The ID of the job to analyse.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1578,7 +1728,7 @@ _Cancel Fine Tuning Job_
 
 Request the cancellation of a fine tuning job.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1592,7 +1742,7 @@ Request the cancellation of a fine tuning job.
 
 The ID of the job to cancel.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1636,7 +1786,7 @@ The ID of the job to cancel.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1668,7 +1818,7 @@ _Start Fine Tuning Job_
 
 Request the start of a validated fine tuning job.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -1680,7 +1830,7 @@ Request the start of a validated fine tuning job.
 
 ##### job\_id <Pill variant="warning">required</Pill> [#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+parameters+job_id]
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -1722,7 +1872,7 @@ Request the start of a validated fine tuning job.
 
 OK
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
