--- a/examples/nextra/petstore/src/app/api/tag/evolution/page.mdx
+++ b/examples/nextra/petstore/src/app/api/tag/evolution/page.mdx
@@ -2,6 +2,7 @@
 sidebarTitle: Evolution
 ---
 
+import "@speakeasy-api/docs-md/nextra.css";
 import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSection, TabbedSection, SectionTab } from "@speakeasy-api/docs-md/nextra";
 
 
@@ -13,7 +14,7 @@ _List evolution chains_
 
 Evolution chains are essentially family trees. They start with the lowest stage within a family and detail evolution conditions for each as well as Pokémon they can evolve into up through the hierarchy.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -23,7 +24,7 @@ Evolution chains are essentially family trees. They start with the lowest stage 
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -39,7 +40,15 @@ Evolution chains are essentially family trees. They start with the lowest stage 
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_evolution_chain_list+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_evolution_chain_list+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_list+security+SchemeBasicAuth+properties]
 
@@ -63,6 +72,8 @@ Evolution chains are essentially family trees. They start with the lowest stage 
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -83,7 +94,7 @@ Evolution chains are essentially family trees. They start with the lowest stage 
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -97,7 +108,7 @@ Evolution chains are essentially family trees. They start with the lowest stage 
 
 Number of results to return per page.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -127,7 +138,7 @@ Number of results to return per page.
 
 The initial index from which to return the results.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -158,7 +169,7 @@ The initial index from which to return the results.
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -189,7 +200,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_evolution_chain_list+responses]
+### Response [#operation-api_v2_evolution_chain_list+responses]
 
 </SectionTitle>
 
@@ -201,7 +212,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_evolution_chain_list+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -265,7 +276,15 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </Property>
 
-<ExpandableSection title="EvolutionChainSummary" id="operation-api_v2_evolution_chain_list+200+application-json+EvolutionChainSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### EvolutionChainSummary [#operation-api_v2_evolution_chain_list+200+application-json+EvolutionChainSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_list+200+application-json+EvolutionChainSummary+properties]
 
@@ -276,6 +295,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 ##### url [#operation-api_v2_evolution_chain_list+200+application-json+EvolutionChainSummary+url]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -295,7 +316,7 @@ _Get evolution chain_
 
 Evolution chains are essentially family trees. They start with the lowest stage within a family and detail evolution conditions for each as well as Pokémon they can evolve into up through the hierarchy.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -305,7 +326,7 @@ Evolution chains are essentially family trees. They start with the lowest stage 
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -321,7 +342,15 @@ Evolution chains are essentially family trees. They start with the lowest stage 
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_evolution_chain_retrieve+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_evolution_chain_retrieve+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+security+SchemeBasicAuth+properties]
 
@@ -345,6 +374,8 @@ Evolution chains are essentially family trees. They start with the lowest stage 
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -365,7 +396,7 @@ Evolution chains are essentially family trees. They start with the lowest stage 
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -379,7 +410,7 @@ Evolution chains are essentially family trees. They start with the lowest stage 
 
 This parameter can be a string or an integer.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -409,7 +440,7 @@ This parameter can be a string or an integer.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_evolution_chain_retrieve+responses]
+### Response [#operation-api_v2_evolution_chain_retrieve+responses]
 
 </SectionTitle>
 
@@ -421,7 +452,7 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_evolution_chain_retrieve+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -437,7 +468,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="ItemSummary" id="operation-api_v2_evolution_chain_retrieve+200+application-json+ItemSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### ItemSummary [#operation-api_v2_evolution_chain_retrieve+200+application-json+ItemSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+ItemSummary+properties]
 
@@ -461,6 +500,8 @@ This parameter can be a string or an integer.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -473,7 +514,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="chain" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### chain [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+properties]
 
@@ -495,7 +544,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="evolves_to" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### evolves\_to [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+properties]
 
@@ -507,7 +564,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="evolution_detail" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### evolution\_detail [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+properties]
 
@@ -519,7 +584,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -552,6 +625,8 @@ _Example:_
 ```
 2
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -567,7 +642,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -600,6 +683,8 @@ _Example:_
 ```
 2
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -615,7 +700,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -648,6 +741,8 @@ _Example:_
 ```
 2
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -683,7 +778,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -716,6 +819,8 @@ _Example:_
 ```
 2
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -831,7 +936,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -867,6 +980,8 @@ _Example:_
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -878,6 +993,8 @@ _Example:_
 ##### turn_upside_down [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+turn_upside_down]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -903,7 +1020,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="evolution_detail" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### evolution\_detail [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+properties]
 
@@ -915,7 +1040,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -948,6 +1081,8 @@ _Example:_
 ```
 2
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -963,7 +1098,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -996,6 +1139,8 @@ _Example:_
 ```
 2
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1011,7 +1156,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -1044,6 +1197,8 @@ _Example:_
 ```
 2
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1079,7 +1234,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -1112,6 +1275,8 @@ _Example:_
 ```
 2
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1227,7 +1392,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -1263,6 +1436,8 @@ _Example:_
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1277,7 +1452,11 @@ _Example:_
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1303,7 +1482,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="evolves_to" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### evolves\_to [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+properties]
 
@@ -1315,7 +1502,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="evolution_detail" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### evolution\_detail [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+properties]
 
@@ -1327,7 +1522,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -1360,6 +1563,8 @@ _Example:_
 ```
 2
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1375,7 +1580,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -1408,6 +1621,8 @@ _Example:_
 ```
 2
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1423,7 +1638,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -1456,6 +1679,8 @@ _Example:_
 ```
 2
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1491,7 +1716,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -1524,6 +1757,8 @@ _Example:_
 ```
 2
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1639,7 +1874,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -1675,6 +1918,8 @@ _Example:_
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -1686,6 +1931,8 @@ _Example:_
 ##### turn_upside_down [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+turn_upside_down]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1711,7 +1958,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="evolution_detail" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### evolution\_detail [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+properties]
 
@@ -1723,7 +1978,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -1756,6 +2019,8 @@ _Example:_
 ```
 2
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1771,7 +2036,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -1804,6 +2077,8 @@ _Example:_
 ```
 2
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1819,7 +2094,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -1852,6 +2135,8 @@ _Example:_
 ```
 2
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -1887,7 +2172,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -1920,6 +2213,8 @@ _Example:_
 ```
 2
 ```
+
+</SectionContent>
 
 </SectionContent>
 
@@ -2035,7 +2330,15 @@ _Example:_
 
 </Property>
 
-<ExpandableSection title="gender" id="operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### gender [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_chain_retrieve+200+application-json+chain+evolves_to+evolution_detail+gender+properties]
 
@@ -2071,6 +2374,8 @@ _Example:_
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -2085,11 +2390,17 @@ _Example:_
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -2119,7 +2430,7 @@ _List evolution triggers_
 
 Evolution triggers are the events and conditions that cause a Pokémon to evolve. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Methods_of_evolution) for greater detail.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -2129,7 +2440,7 @@ Evolution triggers are the events and conditions that cause a Pokémon to evolve
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -2145,7 +2456,15 @@ Evolution triggers are the events and conditions that cause a Pokémon to evolve
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_evolution_trigger_list+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_evolution_trigger_list+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_trigger_list+security+SchemeBasicAuth+properties]
 
@@ -2169,6 +2488,8 @@ Evolution triggers are the events and conditions that cause a Pokémon to evolve
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -2189,7 +2510,7 @@ Evolution triggers are the events and conditions that cause a Pokémon to evolve
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -2203,7 +2524,7 @@ Evolution triggers are the events and conditions that cause a Pokémon to evolve
 
 Number of results to return per page.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -2233,7 +2554,7 @@ Number of results to return per page.
 
 The initial index from which to return the results.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -2264,7 +2585,7 @@ The initial index from which to return the results.
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -2295,7 +2616,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_evolution_trigger_list+responses]
+### Response [#operation-api_v2_evolution_trigger_list+responses]
 
 </SectionTitle>
 
@@ -2307,7 +2628,7 @@ Case-insensitive query applied on the `name` property.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_evolution_trigger_list+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -2371,7 +2692,15 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </Property>
 
-<ExpandableSection title="EvolutionTriggerSummary" id="operation-api_v2_evolution_trigger_list+200+application-json+EvolutionTriggerSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### EvolutionTriggerSummary [#operation-api_v2_evolution_trigger_list+200+application-json+EvolutionTriggerSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_trigger_list+200+application-json+EvolutionTriggerSummary+properties]
 
@@ -2395,6 +2724,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -2411,7 +2742,7 @@ _Get evolution trigger_
 
 Evolution triggers are the events and conditions that cause a Pokémon to evolve. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Methods_of_evolution) for greater detail.
 
-<Section>
+<Section contentBorderVariant="default">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -2421,7 +2752,7 @@ Evolution triggers are the events and conditions that cause a Pokémon to evolve
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -2437,7 +2768,15 @@ Evolution triggers are the events and conditions that cause a Pokémon to evolve
 
 </Property>
 
-<ExpandableSection title="SchemeBasicAuth" id="operation-api_v2_evolution_trigger_retrieve+security+SchemeBasicAuth">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### SchemeBasicAuth [#operation-api_v2_evolution_trigger_retrieve+security+SchemeBasicAuth]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_trigger_retrieve+security+SchemeBasicAuth+properties]
 
@@ -2461,6 +2800,8 @@ Evolution triggers are the events and conditions that cause a Pokémon to evolve
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -2481,7 +2822,7 @@ Evolution triggers are the events and conditions that cause a Pokémon to evolve
 
 </Section>
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
@@ -2495,7 +2836,7 @@ Evolution triggers are the events and conditions that cause a Pokémon to evolve
 
 This parameter can be a string or an integer.
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -2525,7 +2866,7 @@ This parameter can be a string or an integer.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-api_v2_evolution_trigger_retrieve+responses]
+### Response [#operation-api_v2_evolution_trigger_retrieve+responses]
 
 </SectionTitle>
 
@@ -2537,7 +2878,7 @@ This parameter can be a string or an integer.
 
 <SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_evolution_trigger_retrieve+200+application-json">
 
-<Section>
+<Section contentBorderVariant="all">
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="default">
 
@@ -2573,7 +2914,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="EvolutionTriggerName" id="operation-api_v2_evolution_trigger_retrieve+200+application-json+EvolutionTriggerName">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### EvolutionTriggerName [#operation-api_v2_evolution_trigger_retrieve+200+application-json+EvolutionTriggerName]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_trigger_retrieve+200+application-json+EvolutionTriggerName+properties]
 
@@ -2585,7 +2934,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="LanguageSummary" id="operation-api_v2_evolution_trigger_retrieve+200+application-json+EvolutionTriggerName+LanguageSummary">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### LanguageSummary [#operation-api_v2_evolution_trigger_retrieve+200+application-json+EvolutionTriggerName+LanguageSummary]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_trigger_retrieve+200+application-json+EvolutionTriggerName+LanguageSummary+properties]
 
@@ -2609,6 +2966,8 @@ This parameter can be a string or an integer.
 
 </SectionContent>
 
+</SectionContent>
+
 </ExpandableSection>
 
 </SectionContent>
@@ -2620,6 +2979,8 @@ This parameter can be a string or an integer.
 ##### name [#operation-api_v2_evolution_trigger_retrieve+200+application-json+EvolutionTriggerName+name]
 
 </Property>
+
+</SectionContent>
 
 </SectionContent>
 
@@ -2635,7 +2996,15 @@ This parameter can be a string or an integer.
 
 </Property>
 
-<ExpandableSection title="pokemon_specie" id="operation-api_v2_evolution_trigger_retrieve+200+application-json+pokemon_specie">
+<ExpandableSection>
+
+<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+
+#### pokemon\_specie [#operation-api_v2_evolution_trigger_retrieve+200+application-json+pokemon_specie]
+
+</SectionTitle>
+
+<SectionContent slot="content" borderVariant="default" paddingVariant="default">
 
 #### Properties [#operation-api_v2_evolution_trigger_retrieve+200+application-json+pokemon_specie+properties]
 
@@ -2668,6 +3037,8 @@ _Example:_
 ```
 https://pokeapi.co/api/v2/pokemon-species/2/
 ```
+
+</SectionContent>
 
 </SectionContent>
 
